@@ -17,61 +17,17 @@
 
 package org.openqa.selenium.remote;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
+import static java.util.Collections.singleton;
+import static java.util.concurrent.TimeUnit.SECONDS;
+import static java.util.logging.Level.SEVERE;
+import static org.openqa.selenium.remote.CapabilityType.PLATFORM_NAME;
 
-import org.openqa.selenium.AcceptedW3CCapabilityKeys;
-import org.openqa.selenium.Alert;
-import org.openqa.selenium.Beta;
-import org.openqa.selenium.By;
-import org.openqa.selenium.Capabilities;
-import org.openqa.selenium.Cookie;
-import org.openqa.selenium.Dimension;
-import org.openqa.selenium.HasCapabilities;
-import org.openqa.selenium.ImmutableCapabilities;
-import org.openqa.selenium.JavascriptExecutor;
-import org.openqa.selenium.MutableCapabilities;
-import org.openqa.selenium.NoSuchFrameException;
-import org.openqa.selenium.NoSuchWindowException;
-import org.openqa.selenium.OutputType;
-import org.openqa.selenium.Pdf;
-import org.openqa.selenium.Platform;
-import org.openqa.selenium.Point;
-import org.openqa.selenium.PrintsPage;
-import org.openqa.selenium.SearchContext;
-import org.openqa.selenium.SessionNotCreatedException;
-import org.openqa.selenium.TakesScreenshot;
-import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebDriverException;
-import org.openqa.selenium.WebElement;
-import org.openqa.selenium.WindowType;
-import org.openqa.selenium.devtools.DevTools;
-import org.openqa.selenium.devtools.HasDevTools;
-import org.openqa.selenium.interactions.Interactive;
-import org.openqa.selenium.interactions.Sequence;
-import org.openqa.selenium.internal.Require;
-import org.openqa.selenium.logging.LocalLogs;
-import org.openqa.selenium.logging.LogType;
-import org.openqa.selenium.logging.LoggingHandler;
-import org.openqa.selenium.logging.LoggingPreferences;
-import org.openqa.selenium.logging.Logs;
-import org.openqa.selenium.logging.NeedsLocalLogs;
-import org.openqa.selenium.print.PrintOptions;
-import org.openqa.selenium.remote.http.ClientConfig;
-import org.openqa.selenium.remote.http.ConnectionFailedException;
-import org.openqa.selenium.remote.http.HttpClient;
-import org.openqa.selenium.remote.internal.WebElementToJsonConverter;
-import org.openqa.selenium.remote.tracing.TracedHttpClient;
-import org.openqa.selenium.remote.tracing.Tracer;
-import org.openqa.selenium.remote.tracing.opentelemetry.OpenTelemetryTracer;
-import org.openqa.selenium.virtualauthenticator.Credential;
-import org.openqa.selenium.virtualauthenticator.HasVirtualAuthenticator;
-import org.openqa.selenium.virtualauthenticator.VirtualAuthenticator;
-import org.openqa.selenium.virtualauthenticator.VirtualAuthenticatorOptions;
-
+import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.nio.file.Path;
 import java.time.Duration;
+import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
@@ -87,30 +43,82 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import static java.util.Collections.singleton;
-import static java.util.concurrent.TimeUnit.SECONDS;
-import static java.util.logging.Level.SEVERE;
-import static org.openqa.selenium.remote.CapabilityType.LOGGING_PREFS;
-import static org.openqa.selenium.remote.CapabilityType.PLATFORM_NAME;
-import static org.openqa.selenium.remote.CapabilityType.SUPPORTS_JAVASCRIPT;
+import org.openqa.selenium.AcceptedW3CCapabilityKeys;
+import org.openqa.selenium.Alert;
+import org.openqa.selenium.Beta;
+import org.openqa.selenium.By;
+import org.openqa.selenium.Capabilities;
+import org.openqa.selenium.Cookie;
+import org.openqa.selenium.Dimension;
+import org.openqa.selenium.HasCapabilities;
+import org.openqa.selenium.HasDownloads;
+import org.openqa.selenium.ImmutableCapabilities;
+import org.openqa.selenium.JavascriptExecutor;
+import org.openqa.selenium.MutableCapabilities;
+import org.openqa.selenium.NoAlertPresentException;
+import org.openqa.selenium.NoSuchFrameException;
+import org.openqa.selenium.NoSuchWindowException;
+import org.openqa.selenium.OutputType;
+import org.openqa.selenium.Pdf;
+import org.openqa.selenium.Platform;
+import org.openqa.selenium.Point;
+import org.openqa.selenium.PrintsPage;
+import org.openqa.selenium.SearchContext;
+import org.openqa.selenium.SessionNotCreatedException;
+import org.openqa.selenium.TakesScreenshot;
+import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.WebDriverException;
+import org.openqa.selenium.WebElement;
+import org.openqa.selenium.WindowType;
+import org.openqa.selenium.bidi.BiDi;
+import org.openqa.selenium.bidi.HasBiDi;
+import org.openqa.selenium.devtools.DevTools;
+import org.openqa.selenium.devtools.HasDevTools;
+import org.openqa.selenium.federatedcredentialmanagement.FederatedCredentialManagementDialog;
+import org.openqa.selenium.federatedcredentialmanagement.HasFederatedCredentialManagement;
+import org.openqa.selenium.interactions.Interactive;
+import org.openqa.selenium.interactions.Sequence;
+import org.openqa.selenium.internal.Debug;
+import org.openqa.selenium.internal.Require;
+import org.openqa.selenium.io.Zip;
+import org.openqa.selenium.logging.LocalLogs;
+import org.openqa.selenium.logging.LoggingHandler;
+import org.openqa.selenium.logging.Logs;
+import org.openqa.selenium.logging.NeedsLocalLogs;
+import org.openqa.selenium.print.PrintOptions;
+import org.openqa.selenium.remote.http.ClientConfig;
+import org.openqa.selenium.remote.http.ConnectionFailedException;
+import org.openqa.selenium.remote.http.HttpClient;
+import org.openqa.selenium.remote.tracing.TracedHttpClient;
+import org.openqa.selenium.remote.tracing.Tracer;
+import org.openqa.selenium.remote.tracing.opentelemetry.OpenTelemetryTracer;
+import org.openqa.selenium.virtualauthenticator.Credential;
+import org.openqa.selenium.virtualauthenticator.HasVirtualAuthenticator;
+import org.openqa.selenium.virtualauthenticator.VirtualAuthenticator;
+import org.openqa.selenium.virtualauthenticator.VirtualAuthenticatorOptions;
 
 @Augmentable
-public class RemoteWebDriver implements WebDriver,
-  JavascriptExecutor,
-  HasCapabilities,
-  HasVirtualAuthenticator,
-  Interactive,
-  PrintsPage,
-  TakesScreenshot {
+public class RemoteWebDriver
+    implements WebDriver,
+        JavascriptExecutor,
+        HasCapabilities,
+        HasDownloads,
+        HasFederatedCredentialManagement,
+        HasVirtualAuthenticator,
+        Interactive,
+        PrintsPage,
+        TakesScreenshot {
 
-  // TODO: This static logger should be unified with the per-instance localLogs
-  private static final Logger logger = Logger.getLogger(RemoteWebDriver.class.getName());
+  private static final Logger LOG = Logger.getLogger(RemoteWebDriver.class.getName());
+
+  /** Boolean system property that defines whether the tracing is enabled or not. */
+  private static final String WEBDRIVER_REMOTE_ENABLE_TRACING = "webdriver.remote.enableTracing";
+
   private final ElementLocation elementLocation = new ElementLocation();
   private Level level = Level.FINE;
   private ErrorHandler errorHandler = new ErrorHandler();
   private CommandExecutor executor;
-  private Capabilities capabilities;
+  protected Capabilities capabilities;
   private SessionId sessionId;
   private FileDetector fileDetector = new UselessFileDetector();
   private ExecuteMethod executeMethod;
@@ -120,34 +128,43 @@ public class RemoteWebDriver implements WebDriver,
   private Logs remoteLogs;
   private LocalLogs localLogs;
 
+  private Script remoteScript;
+
+  private Network remoteNetwork;
+
   // For cglib
   protected RemoteWebDriver() {
     this.capabilities = init(new ImmutableCapabilities());
   }
 
   public RemoteWebDriver(Capabilities capabilities) {
-    this(getDefaultServerURL(),
-         Require.nonNull("Capabilities", capabilities), true);
+    this(
+        getDefaultServerURL(),
+        Require.nonNull("Capabilities", capabilities),
+        Boolean.parseBoolean(System.getProperty(WEBDRIVER_REMOTE_ENABLE_TRACING, "true")));
   }
 
   public RemoteWebDriver(Capabilities capabilities, boolean enableTracing) {
-    this(getDefaultServerURL(),
-         Require.nonNull("Capabilities", capabilities), enableTracing);
+    this(getDefaultServerURL(), Require.nonNull("Capabilities", capabilities), enableTracing);
   }
 
   public RemoteWebDriver(URL remoteAddress, Capabilities capabilities) {
-    this(createExecutor(Require.nonNull("Server URL", remoteAddress), true),
-         Require.nonNull("Capabilities", capabilities));
+    this(
+        createExecutor(
+            Require.nonNull("Server URL", remoteAddress),
+            Boolean.parseBoolean(System.getProperty(WEBDRIVER_REMOTE_ENABLE_TRACING, "true"))),
+        Require.nonNull("Capabilities", capabilities));
   }
 
   public RemoteWebDriver(URL remoteAddress, Capabilities capabilities, boolean enableTracing) {
-    this(createExecutor(Require.nonNull("Server URL", remoteAddress), enableTracing),
-         Require.nonNull("Capabilities", capabilities));
+    this(
+        createExecutor(Require.nonNull("Server URL", remoteAddress), enableTracing),
+        Require.nonNull("Capabilities", capabilities));
   }
 
   public RemoteWebDriver(CommandExecutor executor, Capabilities capabilities) {
     this.executor = Require.nonNull("Command executor", executor);
-    capabilities = init(capabilities);
+    this.capabilities = init(capabilities);
 
     if (executor instanceof NeedsLocalLogs) {
       ((NeedsLocalLogs) executor).setLocalLogs(localLogs);
@@ -178,10 +195,11 @@ public class RemoteWebDriver implements WebDriver,
     ClientConfig config = ClientConfig.defaultConfig().baseUrl(remoteAddress);
     if (enableTracing) {
       Tracer tracer = OpenTelemetryTracer.getInstance();
-      CommandExecutor executor = new HttpCommandExecutor(
-        Collections.emptyMap(),
-        config,
-        new TracedHttpClient.Factory(tracer, HttpClient.Factory.createDefault()));
+      CommandExecutor executor =
+          new HttpCommandExecutor(
+              Collections.emptyMap(),
+              config,
+              new TracedHttpClient.Factory(tracer, HttpClient.Factory.createDefault()));
       return new TracedCommandExecutor(executor, tracer);
     } else {
       return new HttpCommandExecutor(config);
@@ -196,31 +214,16 @@ public class RemoteWebDriver implements WebDriver,
   private Capabilities init(Capabilities capabilities) {
     capabilities = capabilities == null ? new ImmutableCapabilities() : capabilities;
 
-    logger.addHandler(LoggingHandler.getInstance());
+    LOG.addHandler(LoggingHandler.getInstance());
 
     converter = new JsonToWebElementConverter(this);
     executeMethod = new RemoteExecuteMethod(this);
 
-    ImmutableSet.Builder<String> builder = new ImmutableSet.Builder<>();
+    Set<String> logTypesToIgnore = Set.of();
 
-    boolean isProfilingEnabled = capabilities.is(CapabilityType.ENABLE_PROFILING_CAPABILITY);
-    if (isProfilingEnabled) {
-      builder.add(LogType.PROFILER);
-    }
-
-    LoggingPreferences mergedLoggingPrefs = new LoggingPreferences();
-    mergedLoggingPrefs.addPreferences((LoggingPreferences) capabilities.getCapability(LOGGING_PREFS));
-
-    if (!mergedLoggingPrefs.getEnabledLogTypes().contains(LogType.CLIENT) ||
-        mergedLoggingPrefs.getLevel(LogType.CLIENT) != Level.OFF) {
-      builder.add(LogType.CLIENT);
-    }
-
-    Set<String> logTypesToInclude = builder.build();
-
-    LocalLogs performanceLogger = LocalLogs.getStoringLoggerInstance(logTypesToInclude);
-    LocalLogs clientLogs = LocalLogs.getHandlerBasedLoggerInstance(
-      LoggingHandler.getInstance(), logTypesToInclude);
+    LocalLogs performanceLogger = LocalLogs.getStoringLoggerInstance(logTypesToIgnore);
+    LocalLogs clientLogs =
+        LocalLogs.getHandlerBasedLoggerInstance(LoggingHandler.getInstance(), logTypesToIgnore);
     localLogs = LocalLogs.getCombinedLogsHolder(clientLogs, performanceLogger);
     remoteLogs = new RemoteLogs(executeMethod, localLogs);
 
@@ -243,29 +246,29 @@ public class RemoteWebDriver implements WebDriver,
 
     if (response == null) {
       throw new SessionNotCreatedException(
-        "The underlying command executor returned a null response.");
+          "The underlying command executor returned a null response.");
     }
 
     Object responseValue = response.getValue();
 
     if (responseValue == null) {
       throw new SessionNotCreatedException(
-        "The underlying command executor returned a response without payload: " +
-        response);
+          "The underlying command executor returned a response without payload: " + response);
     }
 
     if (!(responseValue instanceof Map)) {
       throw new SessionNotCreatedException(
-        "The underlying command executor returned a response with a non well formed payload: " +
-        response);
+          "The underlying command executor returned a response with a non well formed payload: "
+              + response);
     }
 
-    @SuppressWarnings("unchecked") Map<String, Object> rawCapabilities = (Map<String, Object>) responseValue;
+    @SuppressWarnings("unchecked")
+    Map<String, Object> rawCapabilities = (Map<String, Object>) responseValue;
     MutableCapabilities returnedCapabilities = new MutableCapabilities(rawCapabilities);
     String platformString = (String) rawCapabilities.get(PLATFORM_NAME);
     Platform platform;
     try {
-      if (platformString == null || "".equals(platformString)) {
+      if (platformString == null || platformString.isEmpty()) {
         platform = Platform.ANY;
       } else {
         platform = Platform.fromString(platformString);
@@ -299,7 +302,7 @@ public class RemoteWebDriver implements WebDriver,
 
   @Override
   public Capabilities getCapabilities() {
-    if(capabilities == null){
+    if (capabilities == null) {
       return new ImmutableCapabilities();
     }
     return capabilities;
@@ -336,9 +339,11 @@ public class RemoteWebDriver implements WebDriver,
     } else if (result instanceof byte[]) {
       return outputType.convertFromPngBytes((byte[]) result);
     } else {
-      throw new RuntimeException(String.format("Unexpected result for %s command: %s",
-          DriverCommand.SCREENSHOT,
-          result == null ? "null" : result.getClass().getName() + " instance"));
+      throw new RuntimeException(
+          String.format(
+              "Unexpected result for %s command: %s",
+              DriverCommand.SCREENSHOT,
+              result == null ? "null" : result.getClass().getName() + " instance"));
     }
   }
 
@@ -358,9 +363,7 @@ public class RemoteWebDriver implements WebDriver,
   }
 
   WebElement findElement(
-    SearchContext context,
-    BiFunction<String, Object, CommandPayload> findCommand,
-    By locator) {
+      SearchContext context, BiFunction<String, Object, CommandPayload> findCommand, By locator) {
 
     return elementLocation.findElement(this, context, findCommand, locator);
   }
@@ -373,27 +376,9 @@ public class RemoteWebDriver implements WebDriver,
   }
 
   public List<WebElement> findElements(
-    SearchContext context,
-    BiFunction<String, Object, CommandPayload> findCommand,
-    By locator) {
+      SearchContext context, BiFunction<String, Object, CommandPayload> findCommand, By locator) {
 
     return elementLocation.findElements(this, context, findCommand, locator);
-  }
-
-  /**
-   * @deprecated Rely on using {@link By.Remotable} instead
-   */
-  @Deprecated
-  protected WebElement findElement(String by, String using) {
-    throw new UnsupportedOperationException("`findElement` has been replaced by usages of " + By.Remotable.class);
-  }
-
-  /**
-   * @deprecated Rely on using {@link By.Remotable} instead
-   */
-  @Deprecated
-  protected List<WebElement> findElements(String by, String using) {
-    throw new UnsupportedOperationException("`findElement` has been replaced by usages of " + By.Remotable.class);
   }
 
   protected void setFoundBy(SearchContext context, WebElement element, String by, String using) {
@@ -415,7 +400,8 @@ public class RemoteWebDriver implements WebDriver,
   public void close() {
     if (this instanceof HasDevTools) {
       // This is a brute force approach to "solving" the problem of a hanging
-      // CDP connection. Take a look at https://github.com/aslushnikov/getting-started-with-cdp#session-hierarchy
+      // CDP connection. Take a look at
+      // https://github.com/aslushnikov/getting-started-with-cdp#session-hierarchy
       // to get up to speed, but essentially if the page session of the
       // first browser window is closed, the next CDP command will hang
       // indefinitely. To prevent that from happening, we close the current
@@ -423,13 +409,22 @@ public class RemoteWebDriver implements WebDriver,
 
       try {
         ((HasDevTools) this).maybeGetDevTools().ifPresent(DevTools::disconnectSession);
-      }
-      catch (ConnectionFailedException unableToEstablishWebsocketConnection) {
-        logger.log(SEVERE, "Failed to disconnect DevTools session", unableToEstablishWebsocketConnection);
+      } catch (ConnectionFailedException unableToEstablishWebsocketConnection) {
+        LOG.log(
+            SEVERE, "Failed to disconnect DevTools session", unableToEstablishWebsocketConnection);
       }
     }
 
-    execute(DriverCommand.CLOSE);
+    Response response = execute(DriverCommand.CLOSE);
+    Object value = response.getValue();
+    List<String> windowHandles = (ArrayList<String>) value;
+
+    if (windowHandles.isEmpty() && this instanceof HasBiDi) {
+      // If no top-level browsing contexts are open after calling close, it indicates that the
+      // WebDriver session is closed.
+      // If the WebDriver session is closed, the BiDi session also needs to be closed.
+      ((HasBiDi) this).maybeGetBiDi().ifPresent(BiDi::close);
+    }
   }
 
   @Override
@@ -440,6 +435,14 @@ public class RemoteWebDriver implements WebDriver,
     }
 
     try {
+      if (this instanceof HasDevTools) {
+        ((HasDevTools) this).maybeGetDevTools().ifPresent(DevTools::close);
+      }
+
+      if (this instanceof HasBiDi) {
+        ((HasBiDi) this).maybeGetBiDi().ifPresent(BiDi::close);
+      }
+
       execute(DriverCommand.QUIT);
     } finally {
       sessionId = null;
@@ -456,7 +459,7 @@ public class RemoteWebDriver implements WebDriver,
       return new LinkedHashSet<>(returnedValues);
     } catch (ClassCastException ex) {
       throw new WebDriverException(
-        "Returned value cannot be converted to List<String>: " + value, ex);
+          "Returned value cannot be converted to List<String>: " + value, ex);
     }
   }
 
@@ -467,38 +470,18 @@ public class RemoteWebDriver implements WebDriver,
 
   @Override
   public Object executeScript(String script, Object... args) {
-    if (!isJavascriptEnabled()) {
-      throw new UnsupportedOperationException(
-          "You must be using an underlying instance of WebDriver that supports executing javascript");
-    }
-
-    // Escape the quote marks
-    script = script.replaceAll("\"", "\\\"");
-
-    List<Object> convertedArgs = Stream.of(args).map(new WebElementToJsonConverter()).collect(
-        Collectors.toList());
+    List<Object> convertedArgs =
+        Stream.of(args).map(new WebElementToJsonConverter()).collect(Collectors.toList());
 
     return execute(DriverCommand.EXECUTE_SCRIPT(script, convertedArgs)).getValue();
   }
 
   @Override
   public Object executeAsyncScript(String script, Object... args) {
-    if (!isJavascriptEnabled()) {
-      throw new UnsupportedOperationException("You must be using an underlying instance of " +
-          "WebDriver that supports executing javascript");
-    }
-
-    // Escape the quote marks
-    script = script.replaceAll("\"", "\\\"");
-
-    List<Object> convertedArgs = Stream.of(args).map(new WebElementToJsonConverter()).collect(
-        Collectors.toList());
+    List<Object> convertedArgs =
+        Stream.of(args).map(new WebElementToJsonConverter()).collect(Collectors.toList());
 
     return execute(DriverCommand.EXECUTE_ASYNC_SCRIPT(script, convertedArgs)).getValue();
-  }
-
-  private boolean isJavascriptEnabled() {
-    return getCapabilities().is(SUPPORTS_JAVASCRIPT);
   }
 
   @Override
@@ -516,6 +499,20 @@ public class RemoteWebDriver implements WebDriver,
     return new RemoteWebDriverOptions();
   }
 
+  public Script script() {
+    if (this.remoteScript == null) {
+      this.remoteScript = new RemoteScript(this);
+    }
+    return this.remoteScript;
+  }
+
+  public Network network() {
+    if (this.remoteNetwork == null) {
+      this.remoteNetwork = new RemoteNetwork(this);
+    }
+    return this.remoteNetwork;
+  }
+
   protected JsonToWebElementConverter getElementConverter() {
     return converter;
   }
@@ -531,7 +528,7 @@ public class RemoteWebDriver implements WebDriver,
    */
   public void setLogLevel(Level level) {
     this.level = level;
-    logger.setLevel(level);
+    LOG.setLevel(level);
   }
 
   protected Response execute(CommandPayload payload) {
@@ -540,8 +537,9 @@ public class RemoteWebDriver implements WebDriver,
 
     long start = System.currentTimeMillis();
     String currentName = Thread.currentThread().getName();
-    Thread.currentThread().setName(
-      String.format("Forwarding %s on session %s to remote", command.getName(), sessionId));
+    Thread.currentThread()
+        .setName(
+            String.format("Forwarding %s on session %s to remote", command.getName(), sessionId));
     try {
       log(sessionId, command.getName(), command, When.BEFORE);
       response = executor.execute(command);
@@ -556,23 +554,41 @@ public class RemoteWebDriver implements WebDriver,
       Object value = getElementConverter().apply(response.getValue());
       response.setValue(value);
     } catch (Throwable e) {
-      log(sessionId, command.getName(), command, When.EXCEPTION);
+      log(sessionId, command.getName(), e.getMessage(), When.EXCEPTION);
       WebDriverException toThrow;
       if (command.getName().equals(DriverCommand.NEW_SESSION)) {
         if (e instanceof SessionNotCreatedException) {
           toThrow = (WebDriverException) e;
         } else {
-          toThrow = new SessionNotCreatedException(
-            "Possible causes are invalid address of the remote server or browser start-up failure.", e);
+          toThrow =
+              new SessionNotCreatedException(
+                  "Possible causes are invalid address of the remote server or browser start-up"
+                      + " failure.",
+                  e);
         }
       } else if (e instanceof WebDriverException) {
         toThrow = (WebDriverException) e;
       } else {
-        toThrow = new UnreachableBrowserException(
-          "Error communicating with the remote browser. It may have died.", e);
+        toThrow =
+            new UnreachableBrowserException(
+                "Error communicating with the remote browser. It may have died.", e);
       }
       populateWebDriverException(toThrow);
-      toThrow.addInfo("Command", command.toString());
+      // Showing full command information when user is debugging
+      // Avoid leaking user/pwd values for authenticated Grids.
+      if (toThrow instanceof UnreachableBrowserException && !Debug.isDebugging()) {
+        toThrow.addInfo(
+            "Command",
+            "["
+                + command.getSessionId()
+                + ", "
+                + command.getName()
+                + " "
+                + command.getParameters().keySet()
+                + "]");
+      } else {
+        toThrow.addInfo("Command", command.toString());
+      }
       throw toThrow;
     } finally {
       Thread.currentThread().setName(currentName);
@@ -603,7 +619,7 @@ public class RemoteWebDriver implements WebDriver,
   }
 
   protected Response execute(String command) {
-    return execute(command, ImmutableMap.of());
+    return execute(command, Map.of());
   }
 
   protected ExecuteMethod getExecuteMethod() {
@@ -622,27 +638,95 @@ public class RemoteWebDriver implements WebDriver,
 
   @Override
   public VirtualAuthenticator addVirtualAuthenticator(VirtualAuthenticatorOptions options) {
-    String authenticatorId = (String)
-        execute(DriverCommand.ADD_VIRTUAL_AUTHENTICATOR, options.toMap()).getValue();
+    String authenticatorId =
+        (String) execute(DriverCommand.ADD_VIRTUAL_AUTHENTICATOR, options.toMap()).getValue();
     return new RemoteVirtualAuthenticator(authenticatorId);
   }
 
   @Override
   public void removeVirtualAuthenticator(VirtualAuthenticator authenticator) {
-    execute(DriverCommand.REMOVE_VIRTUAL_AUTHENTICATOR,
-        ImmutableMap.of("authenticatorId", authenticator.getId()));
+    execute(
+        DriverCommand.REMOVE_VIRTUAL_AUTHENTICATOR,
+        Map.of("authenticatorId", authenticator.getId()));
+  }
+
+  /**
+   * Retrieves the downloadable files as a map of file names and their corresponding URLs.
+   *
+   * @return A map containing file names as keys and URLs as values.
+   * @throws WebDriverException if capability to enable downloads is not set
+   */
+  @Override
+  @SuppressWarnings("unchecked")
+  public List<String> getDownloadableFiles() {
+    requireDownloadsEnabled(capabilities);
+
+    Response response = execute(DriverCommand.GET_DOWNLOADABLE_FILES);
+    Map<String, List<String>> value = (Map<String, List<String>>) response.getValue();
+    return value.get("names");
+  }
+
+  /**
+   * Downloads a file from the specified location.
+   *
+   * @param fileName the name of the file to download
+   * @param targetLocation the location where the file should be downloaded
+   * @throws IOException if an I/O error occurs during the file download
+   */
+  @SuppressWarnings("unchecked")
+  @Override
+  public void downloadFile(String fileName, Path targetLocation) throws IOException {
+    requireDownloadsEnabled(capabilities);
+
+    Response response = execute(DriverCommand.DOWNLOAD_FILE, Map.of("name", fileName));
+    String contents = ((Map<String, String>) response.getValue()).get("contents");
+    Zip.unzip(contents, targetLocation.toFile());
+  }
+
+  /**
+   * Deletes all downloadable files.
+   *
+   * @throws WebDriverException capability to enable downloads must be set
+   */
+  @Override
+  public void deleteDownloadableFiles() {
+    requireDownloadsEnabled(capabilities);
+
+    execute(DriverCommand.DELETE_DOWNLOADABLE_FILES);
+  }
+
+  @Override
+  public void setDelayEnabled(boolean enabled) {
+    execute(DriverCommand.SET_DELAY_ENABLED(enabled));
+  }
+
+  @Override
+  public void resetCooldown() {
+    execute(DriverCommand.RESET_COOLDOWN);
+  }
+
+  @Override
+  public FederatedCredentialManagementDialog getFederatedCredentialManagementDialog() {
+    FederatedCredentialManagementDialog dialog = new FedCmDialogImpl(executeMethod);
+    try {
+      // As long as this does not throw, we're good.
+      dialog.getDialogType();
+      return dialog;
+    } catch (NoAlertPresentException e) {
+      return null;
+    }
   }
 
   /**
    * Override this to be notified at key points in the execution of a command.
    *
-   * @param sessionId   the session id.
+   * @param sessionId the session id.
    * @param commandName the command that is being executed.
-   * @param toLog       any data that might be interesting.
-   * @param when        verb tense of "Execute" to prefix message
+   * @param toLog any data that might be interesting.
+   * @param when verb tense of "Execute" to prefix message
    */
   protected void log(SessionId sessionId, String commandName, Object toLog, When when) {
-    if (!logger.isLoggable(level)) {
+    if (!LOG.isLoggable(level)) {
       return;
     }
     String text = String.valueOf(toLog);
@@ -651,53 +735,66 @@ public class RemoteWebDriver implements WebDriver,
       if (text.length() > 100 && Boolean.getBoolean("webdriver.remote.shorten_log_messages")) {
         text = text.substring(0, 100) + "...";
       }
+    } else if (commandName.equals(DriverCommand.NEW_SESSION) && toLog instanceof Response) {
+      Response responseToLog = (Response) toLog;
+      try {
+        Map<String, Object> value = (Map<String, Object>) responseToLog.getValue();
+        text = new MutableCapabilities(value).toString();
+      } catch (ClassCastException ex) {
+        // keep existing text
+      }
     }
-    // No need to log a screenshot response.
+
+    // No need to log a base64 encoded responses.
     if ((commandName.equals(DriverCommand.SCREENSHOT)
-         || commandName.equals(DriverCommand.ELEMENT_SCREENSHOT)) && toLog instanceof Response) {
+            || commandName.equals(DriverCommand.ELEMENT_SCREENSHOT)
+            || commandName.equals(DriverCommand.PRINT_PAGE)
+            || commandName.equals("fullPageScreenshot"))
+        && toLog instanceof Response) {
       Response responseToLog = (Response) toLog;
       Response copyToLog = new Response(new SessionId((responseToLog).getSessionId()));
-      copyToLog.setValue("*Screenshot response suppressed*");
-      copyToLog.setStatus(responseToLog.getStatus());
+      copyToLog.setValue(String.format("*%s response suppressed*", commandName));
       copyToLog.setState(responseToLog.getState());
       text = String.valueOf(copyToLog);
     }
     switch (when) {
       case BEFORE:
-        logger.log(level, "Executing: " + commandName + " " + text);
+        LOG.log(level, "Executing: {0} {1}", new Object[] {commandName, text});
         break;
       case AFTER:
-        logger.log(level, "Executed: " + text);
+        LOG.log(level, "Executed: {0} {1}", new Object[] {commandName, text});
         break;
       case EXCEPTION:
-        logger.log(level, "Exception: " + text);
+        LOG.log(level, "Exception: {0} {1}", new Object[] {commandName, text});
         break;
       default:
-        logger.log(level, text);
+        LOG.log(level, text);
         break;
     }
   }
 
   private void checkNonW3CCapabilities(Capabilities capabilities) {
     // Throwing warnings for non-W3C WebDriver compliant capabilities
-    List<String> invalid = capabilities.asMap().keySet()
-      .stream()
-      .filter(key -> !(new AcceptedW3CCapabilityKeys().test(key)))
-      .collect(Collectors.toList());
+    List<String> invalid =
+        capabilities.asMap().keySet().stream()
+            .filter(key -> !(new AcceptedW3CCapabilityKeys().test(key)))
+            .collect(Collectors.toList());
 
     if (!invalid.isEmpty()) {
-      logger.log(Level.WARNING,
-                 () -> String.format("Support for Legacy Capabilities is deprecated; " +
-                                     "You are sending the following invalid capabilities: %s; " +
-                                     "Please update to W3C Syntax: https://www.selenium.dev/blog/2022/legacy-protocol-support/",
-                                     invalid));
+      LOG.log(
+          Level.WARNING,
+          () ->
+              String.format(
+                  "Support for Legacy Capabilities is deprecated; You are sending the following"
+                      + " invalid capabilities: %s; Please update to W3C Syntax:"
+                      + " https://www.selenium.dev/blog/2022/legacy-protocol-support/",
+                  invalid));
     }
   }
 
   private void checkChromeW3CFalse(Capabilities capabilities) {
     // Throwing warnings when the user sets `w3c: false` inside `goog:chromeOptions`
-    if ("chrome".equalsIgnoreCase(capabilities.getBrowserName()) &&
-        capabilities.asMap().containsKey("goog:chromeOptions")) {
+    if (Browser.CHROME.is(capabilities) && capabilities.asMap().containsKey("goog:chromeOptions")) {
       Object capability = capabilities.getCapability("goog:chromeOptions");
       boolean w3c = true;
       if ((capability instanceof Map)) {
@@ -706,12 +803,11 @@ public class RemoteWebDriver implements WebDriver,
       }
       if (!w3c) {
         throw new WebDriverException(
-          "Setting 'w3c: false' inside 'goog:chromeOptions' will no longer be supported " +
-          "Please update to W3C Syntax: https://www.selenium.dev/blog/2022/legacy-protocol-support/"
-        );
+            "Setting 'w3c: false' inside 'goog:chromeOptions' will no longer be supported Please"
+                + " update to W3C Syntax:"
+                + " https://www.selenium.dev/blog/2022/legacy-protocol-support/");
       }
     }
-
   }
 
   public FileDetector getFileDetector() {
@@ -747,11 +843,8 @@ public class RemoteWebDriver implements WebDriver,
     }
 
     return String.format(
-      "%s: %s on %s (%s)",
-      getClass().getSimpleName(),
-      caps.getBrowserName(),
-      platformName,
-      getSessionId());
+        "%s: %s on %s (%s)",
+        getClass().getSimpleName(), caps.getBrowserName(), platformName, getSessionId());
   }
 
   public enum When {
@@ -800,25 +893,34 @@ public class RemoteWebDriver implements WebDriver,
         return toReturn;
       }
 
-      ((Collection<?>) returned).stream()
-          .map(o -> (Map<String, Object>) o)
-          .map(rawCookie -> {
-            // JSON object keys are defined in
-            // https://w3c.github.io/webdriver/#dfn-table-for-cookie-conversion.
-            Cookie.Builder builder =
-                new Cookie.Builder((String) rawCookie.get("name"), (String) rawCookie.get("value"))
-                    .path((String) rawCookie.get("path"))
-                    .domain((String) rawCookie.get("domain"))
-                    .isSecure(rawCookie.containsKey("secure") && (Boolean) rawCookie.get("secure"))
-                    .isHttpOnly(
-                        rawCookie.containsKey("httpOnly") && (Boolean) rawCookie.get("httpOnly"))
-                    .sameSite((String) rawCookie.get("sameSite"));
+      ((Collection<?>) returned)
+          .stream()
+              .map(o -> (Map<String, Object>) o)
+              .map(
+                  rawCookie -> {
+                    // JSON object keys are defined in
+                    // https://w3c.github.io/webdriver/#dfn-table-for-cookie-conversion.
+                    Cookie.Builder builder =
+                        new Cookie.Builder(
+                                (String) rawCookie.get("name"), (String) rawCookie.get("value"))
+                            .path((String) rawCookie.get("path"))
+                            .domain((String) rawCookie.get("domain"))
+                            .isSecure(
+                                rawCookie.containsKey("secure")
+                                    && (Boolean) rawCookie.get("secure"))
+                            .isHttpOnly(
+                                rawCookie.containsKey("httpOnly")
+                                    && (Boolean) rawCookie.get("httpOnly"))
+                            .sameSite((String) rawCookie.get("sameSite"));
 
-            Number expiryNum = (Number) rawCookie.get("expiry");
-            builder.expiresOn(expiryNum == null ? null : new Date(SECONDS.toMillis(expiryNum.longValue())));
-            return builder.build();
-          })
-          .forEach(toReturn::add);
+                    Number expiryNum = (Number) rawCookie.get("expiry");
+                    builder.expiresOn(
+                        expiryNum == null
+                            ? null
+                            : new Date(SECONDS.toMillis(expiryNum.longValue())));
+                    return builder.build();
+                  })
+              .forEach(toReturn::add);
 
       return toReturn;
     }
@@ -873,6 +975,7 @@ public class RemoteWebDriver implements WebDriver,
         return setScriptTimeout(Duration.ofMillis(unit.toMillis(time)));
       }
 
+      @Deprecated
       @Override
       public Timeouts setScriptTimeout(Duration duration) {
         return scriptTimeout(duration);
@@ -1008,14 +1111,16 @@ public class RemoteWebDriver implements WebDriver,
 
     @Override
     public WebDriver frame(String frameName) {
-      String name = frameName.replaceAll("(['\"\\\\#.:;,!?+<>=~*^$|%&@`{}\\-/\\[\\]\\(\\)])", "\\\\$1");
-      List<WebElement> frameElements = RemoteWebDriver.this.findElements(
-          By.cssSelector("frame[name='" + name + "'],iframe[name='" + name + "']"));
-      if (frameElements.size() == 0) {
-        frameElements = RemoteWebDriver.this.findElements(
-            By.cssSelector("frame#" + name + ",iframe#" + name));
+      String name =
+          frameName.replaceAll("(['\"\\\\#.:;,!?+<>=~*^$|%&@`{}\\-/\\[\\]\\(\\)])", "\\\\$1");
+      List<WebElement> frameElements =
+          RemoteWebDriver.this.findElements(
+              By.cssSelector("frame[name='" + name + "'],iframe[name='" + name + "']"));
+      if (frameElements.isEmpty()) {
+        frameElements =
+            RemoteWebDriver.this.findElements(By.cssSelector("frame#" + name + ",iframe#" + name));
       }
-      if (frameElements.size() == 0) {
+      if (frameElements.isEmpty()) {
         throw new NoSuchFrameException("No frame element found by name or id " + frameName);
       }
       return frame(frameElements.get(0));
@@ -1043,12 +1148,16 @@ public class RemoteWebDriver implements WebDriver,
         // simulate search by name
         String original = getWindowHandle();
         for (String handle : getWindowHandles()) {
-          switchTo().window(handle);
-          if (windowHandleOrName.equals(executeScript("return window.name"))) {
-            return RemoteWebDriver.this; // found by name
+          try {
+            execute(DriverCommand.SWITCH_TO_WINDOW(handle));
+            if (windowHandleOrName.equals(executeScript("return window.name"))) {
+              return RemoteWebDriver.this; // found by name
+            }
+          } catch (NoSuchWindowException nswe) {
+            // swallow
           }
         }
-        switchTo().window(original);
+        execute(DriverCommand.SWITCH_TO_WINDOW(original));
         throw nsw;
       }
     }
@@ -1058,7 +1167,8 @@ public class RemoteWebDriver implements WebDriver,
       String original = getWindowHandle();
       try {
         Response response = execute(DriverCommand.SWITCH_TO_NEW_WINDOW(typeHint));
-        String newWindowHandle = ((Map<String, Object>) response.getValue()).get("handle").toString();
+        String newWindowHandle =
+            ((Map<String, Object>) response.getValue()).get("handle").toString();
         switchTo().window(newWindowHandle);
         return RemoteWebDriver.this;
       } catch (WebDriverException ex) {
@@ -1088,8 +1198,7 @@ public class RemoteWebDriver implements WebDriver,
 
   private class RemoteAlert implements Alert {
 
-    public RemoteAlert() {
-    }
+    public RemoteAlert() {}
 
     @Override
     public void dismiss() {
@@ -1108,7 +1217,6 @@ public class RemoteWebDriver implements WebDriver,
 
     /**
      * @param keysToSend character sequence to send to the alert
-     *
      * @throws IllegalArgumentException if keysToSend is null
      */
     @Override
@@ -1134,17 +1242,19 @@ public class RemoteWebDriver implements WebDriver,
 
     @Override
     public void addCredential(Credential credential) {
-      execute(DriverCommand.ADD_CREDENTIAL,
-          new ImmutableMap.Builder<String, Object>()
-            .putAll(credential.toMap())
-            .put("authenticatorId", id)
-            .build());
+      execute(
+          DriverCommand.ADD_CREDENTIAL,
+          Stream.concat(
+                  credential.toMap().entrySet().stream(),
+                  Stream.of(Map.entry("authenticatorId", id)))
+              .collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, Map.Entry::getValue)));
     }
 
     @Override
     public List<Credential> getCredentials() {
-      List<Map<String, Object>> response = (List<Map<String, Object>>)
-        execute(DriverCommand.GET_CREDENTIALS, ImmutableMap.of("authenticatorId", id)).getValue();
+      List<Map<String, Object>> response =
+          (List<Map<String, Object>>)
+              execute(DriverCommand.GET_CREDENTIALS, Map.of("authenticatorId", id)).getValue();
       return response.stream().map(Credential::fromMap).collect(Collectors.toList());
     }
 
@@ -1155,19 +1265,21 @@ public class RemoteWebDriver implements WebDriver,
 
     @Override
     public void removeCredential(String credentialId) {
-      execute(DriverCommand.REMOVE_CREDENTIAL,
-          ImmutableMap.of("authenticatorId", id, "credentialId", credentialId));
+      execute(
+          DriverCommand.REMOVE_CREDENTIAL,
+          Map.of("authenticatorId", id, "credentialId", credentialId));
     }
 
     @Override
     public void removeAllCredentials() {
-      execute(DriverCommand.REMOVE_ALL_CREDENTIALS, ImmutableMap.of("authenticatorId", id));
+      execute(DriverCommand.REMOVE_ALL_CREDENTIALS, Map.of("authenticatorId", id));
     }
 
     @Override
     public void setUserVerified(boolean verified) {
-      execute(DriverCommand.SET_USER_VERIFIED,
-          ImmutableMap.of("authenticatorId", id, "isUserVerified", verified));
+      execute(
+          DriverCommand.SET_USER_VERIFIED,
+          Map.of("authenticatorId", id, "isUserVerified", verified));
     }
   }
 }
