@@ -17,14 +17,15 @@
 
 package org.openqa.selenium.remote.mobile;
 
-import com.google.common.collect.ImmutableMap;
-
+import java.util.Map;
 import org.openqa.selenium.mobile.NetworkConnection;
 import org.openqa.selenium.remote.DriverCommand;
 import org.openqa.selenium.remote.ExecuteMethod;
 
-import java.util.Map;
-
+/**
+ * @deprecated This functionality is no longer supported
+ */
+@Deprecated
 public class RemoteNetworkConnection implements NetworkConnection {
 
   private final ExecuteMethod executeMethod;
@@ -34,18 +35,20 @@ public class RemoteNetworkConnection implements NetworkConnection {
   }
 
   @Override
+  @Deprecated
   public ConnectionType getNetworkConnection() {
-    return new ConnectionType(((Number) executeMethod.execute(DriverCommand.GET_NETWORK_CONNECTION,
-                                                               null)).intValue());
+    return new ConnectionType(
+        ((Number) executeMethod.execute(DriverCommand.GET_NETWORK_CONNECTION, null)).intValue());
   }
 
   @Override
-  public ConnectionType setNetworkConnection(
-      ConnectionType type) {
-    Map<String, ConnectionType> mode = ImmutableMap.of("type", type);
-    return new ConnectionType(((Number) executeMethod.execute(DriverCommand.SET_NETWORK_CONNECTION,
-                                                            ImmutableMap
-                                                                .of("parameters", mode)))
-                                  .intValue());
+  @Deprecated
+  public ConnectionType setNetworkConnection(ConnectionType type) {
+    Map<String, ConnectionType> mode = Map.of("type", type);
+    return new ConnectionType(
+        ((Number)
+                executeMethod.execute(
+                    DriverCommand.SET_NETWORK_CONNECTION, Map.of("parameters", mode)))
+            .intValue());
   }
 }
