@@ -17,13 +17,6 @@
 
 package org.openqa.selenium.support.ui;
 
-import com.google.common.base.Throwables;
-import com.google.common.collect.ImmutableList;
-
-import org.openqa.selenium.TimeoutException;
-import org.openqa.selenium.WebDriverException;
-import org.openqa.selenium.internal.Require;
-
 import java.time.Clock;
 import java.time.Duration;
 import java.time.Instant;
@@ -32,20 +25,23 @@ import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
 import java.util.function.Supplier;
+import org.openqa.selenium.TimeoutException;
+import org.openqa.selenium.WebDriverException;
+import org.openqa.selenium.internal.Require;
 
 /**
  * An implementation of the {@link Wait} interface that may have its timeout and polling interval
  * configured on the fly.
  *
- * <p>
- * Each FluentWait instance defines the maximum amount of time to wait for a condition, as well as
- * the frequency with which to check the condition. Furthermore, the user may configure the wait to
- * ignore specific types of exceptions whilst waiting, such as
- * {@link org.openqa.selenium.NoSuchElementException NoSuchElementExceptions} when searching for an
- * element on the page.
+ * <p>Each FluentWait instance defines the maximum amount of time to wait for a condition, as well
+ * as the frequency with which to check the condition. Furthermore, the user may configure the wait
+ * to ignore specific types of exceptions whilst waiting, such as {@link
+ * org.openqa.selenium.NoSuchElementException NoSuchElementExceptions} when searching for an element
+ * on the page.
  *
- * <p>
- * Sample usage: <pre>
+ * <p>Sample usage:
+ *
+ * <pre>
  *   // Waiting 30 seconds for an element to be present on the page, checking
  *   // for its presence once every 5 seconds.
  *   Wait&lt;WebDriver&gt; wait = new FluentWait&lt;WebDriver&gt;(driver)
@@ -60,8 +56,7 @@ import java.util.function.Supplier;
  *   });
  * </pre>
  *
- * <p>
- * <em>This class makes no thread safety guarantees.</em>
+ * <p><em>This class makes no thread safety guarantees.</em>
  *
  * @param <T> The input type for each condition used with this instance.
  */
@@ -71,15 +66,15 @@ public class FluentWait<T> implements Wait<T> {
 
   private static final Duration DEFAULT_WAIT_DURATION = Duration.ofMillis(DEFAULT_SLEEP_TIMEOUT);
 
-  private final T input;
-  private final java.time.Clock clock;
-  private final Sleeper sleeper;
+  protected final T input;
+  protected final java.time.Clock clock;
+  protected final Sleeper sleeper;
 
-  private Duration timeout = DEFAULT_WAIT_DURATION;
-  private Duration interval = DEFAULT_WAIT_DURATION;
-  private Supplier<String> messageSupplier = () -> null;
+  protected Duration timeout = DEFAULT_WAIT_DURATION;
+  protected Duration interval = DEFAULT_WAIT_DURATION;
+  protected Supplier<String> messageSupplier = () -> null;
 
-  private List<Class<? extends Throwable>> ignoredExceptions = new ArrayList<>();
+  protected final List<Class<? extends Throwable>> ignoredExceptions = new ArrayList<>();
 
   /**
    * @param input The input value to pass to the evaluated conditions.
@@ -89,19 +84,19 @@ public class FluentWait<T> implements Wait<T> {
   }
 
   /**
-   * @param input   The input value to pass to the evaluated conditions.
-   * @param clock   The clock to use when measuring the timeout.
+   * @param input The input value to pass to the evaluated conditions.
+   * @param clock The clock to use when measuring the timeout.
    * @param sleeper Used to put the thread to sleep between evaluation loops.
    */
   public FluentWait(T input, java.time.Clock clock, Sleeper sleeper) {
-    this.input = Require.nonNull("Input", input);
+    this.input = input;
     this.clock = Require.nonNull("Clock", clock);
     this.sleeper = Require.nonNull("Sleeper", sleeper);
   }
 
   /**
-   * Sets how long to wait for the evaluated condition to be true. The default timeout is
-   * {@link #DEFAULT_WAIT_DURATION}.
+   * Sets how long to wait for the evaluated condition to be true. The default timeout is {@link
+   * #DEFAULT_WAIT_DURATION}.
    *
    * @param timeout The timeout duration.
    * @return A self reference.
@@ -136,9 +131,8 @@ public class FluentWait<T> implements Wait<T> {
   /**
    * Sets how often the condition should be evaluated.
    *
-   * <p>
-   * In reality, the interval may be greater as the cost of actually evaluating a condition function
-   * is not factored in. The default polling interval is {@link #DEFAULT_WAIT_DURATION}.
+   * <p>In reality, the interval may be greater as the cost of actually evaluating a condition
+   * function is not factored in. The default polling interval is {@link #DEFAULT_WAIT_DURATION}.
    *
    * @param interval The timeout duration.
    * @return A self reference.
@@ -153,7 +147,7 @@ public class FluentWait<T> implements Wait<T> {
    * Any exceptions not whitelisted will be allowed to propagate, terminating the wait.
    *
    * @param types The types of exceptions to ignore.
-   * @param <K>   an Exception that extends Throwable
+   * @param <K> an Exception that extends Throwable
    * @return A self reference.
    */
   public <K extends Throwable> FluentWait<T> ignoreAll(Collection<Class<? extends K>> types) {
@@ -167,35 +161,36 @@ public class FluentWait<T> implements Wait<T> {
    * @see #ignoreAll(Collection)
    */
   public FluentWait<T> ignoring(Class<? extends Throwable> exceptionType) {
-    return this.ignoreAll(ImmutableList.<Class<? extends Throwable>>of(exceptionType));
+    return this.ignoreAll(List.<Class<? extends Throwable>>of(exceptionType));
   }
 
   /**
-   * @param firstType  exception to ignore
+   * @param firstType exception to ignore
    * @param secondType another exception to ignore
    * @return a self reference
    * @see #ignoreAll(Collection)
    */
-  public FluentWait<T> ignoring(Class<? extends Throwable> firstType,
-                                Class<? extends Throwable> secondType) {
+  public FluentWait<T> ignoring(
+      Class<? extends Throwable> firstType, Class<? extends Throwable> secondType) {
 
-    return this.ignoreAll(ImmutableList.of(firstType, secondType));
+    return this.ignoreAll(List.of(firstType, secondType));
   }
 
   /**
    * Repeatedly applies this instance's input value to the given function until one of the following
    * occurs:
+   *
    * <ol>
-   * <li>the function returns neither null nor false</li>
-   * <li>the function throws an unignored exception</li>
-   * <li>the timeout expires</li>
-   * <li>the current thread is interrupted</li>
+   *   <li>the function returns neither null nor false
+   *   <li>the function throws an unignored exception
+   *   <li>the timeout expires
+   *   <li>the current thread is interrupted
    * </ol>
    *
    * @param isTrue the parameter to pass to the {@link ExpectedCondition}
-   * @param <V>    The function's expected return type.
-   * @return The function's return value if the function returned something different
-   * from null or false before the timeout expired.
+   * @param <V> The function's expected return type.
+   * @return The function's return value if the function returned something different from null or
+   *     false before the timeout expired.
    * @throws TimeoutException If the timeout expires.
    */
   @Override
@@ -221,13 +216,15 @@ public class FluentWait<T> implements Wait<T> {
       // Check the timeout after evaluating the function to ensure conditions
       // with a zero timeout can succeed.
       if (end.isBefore(clock.instant())) {
-        String message = messageSupplier != null ?
-                         messageSupplier.get() : null;
+        String message = messageSupplier != null ? messageSupplier.get() : null;
 
-        String timeoutMessage = String.format(
-            "Expected condition failed: %s (tried for %d second(s) with %d milliseconds interval)",
-            message == null ? "waiting for " + isTrue : message,
-            timeout.getSeconds(), interval.toMillis());
+        String timeoutMessage =
+            String.format(
+                "Expected condition failed: %s (tried for %d second(s) with %d milliseconds"
+                    + " interval)",
+                message == null ? "waiting for " + isTrue : message,
+                timeout.getSeconds(),
+                interval.toMillis());
         throw timeoutException(timeoutMessage, lastException);
       }
 
@@ -246,7 +243,12 @@ public class FluentWait<T> implements Wait<T> {
         return e;
       }
     }
-    Throwables.throwIfUnchecked(e);
+    if (e instanceof Error) {
+      throw (Error) e;
+    }
+    if (e instanceof RuntimeException) {
+      throw (RuntimeException) e;
+    }
     throw new RuntimeException(e);
   }
 
@@ -254,9 +256,9 @@ public class FluentWait<T> implements Wait<T> {
    * Throws a timeout exception. This method may be overridden to throw an exception that is
    * idiomatic for a particular test infrastructure, such as an AssertionError in JUnit4.
    *
-   * @param message       The timeout message.
+   * @param message The timeout message.
    * @param lastException The last exception to be thrown and subsequently suppressed while waiting
-   *                      on a function.
+   *     on a function.
    * @return Nothing will ever be returned; this return type is only specified as a convenience.
    */
   protected RuntimeException timeoutException(String message, Throwable lastException) {
