@@ -23,23 +23,20 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 import static org.openqa.selenium.testing.drivers.Browser.CHROME;
 import static org.openqa.selenium.testing.drivers.Browser.EDGE;
-import static org.openqa.selenium.testing.drivers.Browser.HTMLUNIT;
-import static org.openqa.selenium.testing.drivers.Browser.IE;
 import static org.openqa.selenium.testing.drivers.Browser.FIREFOX;
+import static org.openqa.selenium.testing.drivers.Browser.IE;
 import static org.openqa.selenium.testing.drivers.Browser.SAFARI;
 
+import java.time.Duration;
+import java.util.Iterator;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.testing.Ignore;
 import org.openqa.selenium.testing.JupiterTestBase;
 import org.openqa.selenium.testing.NotYetImplemented;
 
-import java.time.Duration;
-import java.util.Arrays;
-import java.util.Iterator;
-import java.util.List;
-
-public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
+class ExecutingAsyncJavascriptTest extends JupiterTestBase {
 
   private JavascriptExecutor executor;
 
@@ -47,23 +44,24 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   public void setUp() {
     assumeTrue(driver instanceof JavascriptExecutor);
     executor = (JavascriptExecutor) driver;
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
   }
 
   @Test
   @NotYetImplemented(value = CHROME, reason = "Default to 5s")
+  @NotYetImplemented(value = EDGE, reason = "Default to 5s")
   @NotYetImplemented(value = FIREFOX, reason = "Default to 5s")
   @NotYetImplemented(value = SAFARI, reason = "Default to 5s")
   public void shouldSetAndGetScriptTimeout() {
     Duration timeout = driver.manage().timeouts().getScriptTimeout();
     assertThat(timeout).hasMillis(30000);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(3000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(3000));
     Duration timeout2 = driver.manage().timeouts().getScriptTimeout();
     assertThat(timeout2).hasMillis(3000);
   }
 
   @Test
-  public void shouldNotTimeoutIfCallbackInvokedImmediately() {
+  void shouldNotTimeoutIfCallbackInvokedImmediately() {
     driver.get(pages.ajaxyPage);
     Object result = executor.executeAsyncScript("arguments[arguments.length - 1](123);");
     assertThat(result).isInstanceOf(Number.class);
@@ -71,10 +69,12 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void shouldBeAbleToReturnJavascriptPrimitivesFromAsyncScripts_NeitherNullNorUndefined() {
+  void shouldBeAbleToReturnJavascriptPrimitivesFromAsyncScripts_NeitherNullNorUndefined() {
     driver.get(pages.ajaxyPage);
-    assertThat(((Number) executor.executeAsyncScript(
-        "arguments[arguments.length - 1](123);")).longValue()).isEqualTo(123);
+    assertThat(
+            ((Number) executor.executeAsyncScript("arguments[arguments.length - 1](123);"))
+                .longValue())
+        .isEqualTo(123);
     assertThat(executor.executeAsyncScript("arguments[arguments.length - 1]('abc');"))
         .isEqualTo("abc");
     assertThat((Boolean) executor.executeAsyncScript("arguments[arguments.length - 1](false);"))
@@ -84,14 +84,14 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void shouldBeAbleToReturnJavascriptPrimitivesFromAsyncScripts_NullAndUndefined() {
+  void shouldBeAbleToReturnJavascriptPrimitivesFromAsyncScripts_NullAndUndefined() {
     driver.get(pages.ajaxyPage);
     assertThat(executor.executeAsyncScript("arguments[arguments.length - 1](null)")).isNull();
     assertThat(executor.executeAsyncScript("arguments[arguments.length - 1]()")).isNull();
   }
 
   @Test
-  public void shouldBeAbleToReturnAnArrayLiteralFromAnAsyncScript() {
+  void shouldBeAbleToReturnAnArrayLiteralFromAnAsyncScript() {
     driver.get(pages.ajaxyPage);
 
     Object result = executor.executeAsyncScript("arguments[arguments.length - 1]([]);");
@@ -100,7 +100,7 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void shouldBeAbleToReturnAnArrayObjectFromAnAsyncScript() {
+  void shouldBeAbleToReturnAnArrayObjectFromAnAsyncScript() {
     driver.get(pages.ajaxyPage);
 
     Object result = executor.executeAsyncScript("arguments[arguments.length - 1](new Array());");
@@ -109,11 +109,12 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void shouldBeAbleToReturnArraysOfPrimitivesFromAsyncScripts() {
+  void shouldBeAbleToReturnArraysOfPrimitivesFromAsyncScripts() {
     driver.get(pages.ajaxyPage);
 
-    Object result = executor.executeAsyncScript(
-        "arguments[arguments.length - 1]([null, 123, 'abc', true, false]);");
+    Object result =
+        executor.executeAsyncScript(
+            "arguments[arguments.length - 1]([null, 123, 'abc', true, false]);");
 
     assertThat(result).isNotNull();
     assertThat(result).isInstanceOf(List.class);
@@ -128,7 +129,7 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void shouldBeAbleToReturnWebElementsFromAsyncScripts() {
+  void shouldBeAbleToReturnWebElementsFromAsyncScripts() {
     driver.get(pages.ajaxyPage);
 
     Object result = executor.executeAsyncScript("arguments[arguments.length - 1](document.body);");
@@ -137,11 +138,13 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void shouldBeAbleToReturnArraysOfWebElementsFromAsyncScripts() {
+  @Ignore(value = CHROME, reason = "https://bugs.chromium.org/p/chromedriver/issues/detail?id=4525")
+  void shouldBeAbleToReturnArraysOfWebElementsFromAsyncScripts() {
     driver.get(pages.ajaxyPage);
 
-    Object result = executor.executeAsyncScript(
-        "arguments[arguments.length - 1]([document.body, document.body]);");
+    Object result =
+        executor.executeAsyncScript(
+            "arguments[arguments.length - 1]([document.body, document.body]);");
     assertThat(result).isNotNull().isInstanceOf(List.class);
 
     List<?> list = (List<?>) result;
@@ -174,44 +177,50 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   public void shouldNotTimeoutIfScriptCallsbackInsideAZeroTimeout() {
     driver.get(pages.ajaxyPage);
     executor.executeAsyncScript(
-        "var callback = arguments[arguments.length - 1];" +
-        "window.setTimeout(function() { callback(123); }, 0)");
+        "var callback = arguments[arguments.length - 1];"
+            + "window.setTimeout(function() { callback(123); }, 0)");
   }
 
   @Test
   @NotYetImplemented(SAFARI)
   public void shouldTimeoutIfScriptDoesNotInvokeCallbackWithLongTimeout() {
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(500));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(500));
     driver.get(pages.ajaxyPage);
     assertThatExceptionOfType(ScriptTimeoutException.class)
-        .isThrownBy(() -> executor.executeAsyncScript(
-            "var callback = arguments[arguments.length - 1];" +
-            "window.setTimeout(callback, 1500);"));
+        .isThrownBy(
+            () ->
+                executor.executeAsyncScript(
+                    "var callback = arguments[arguments.length - 1];"
+                        + "window.setTimeout(callback, 1500);"));
   }
 
   @Test
   @Ignore(IE)
   public void shouldDetectPageLoadsWhileWaitingOnAnAsyncScriptAndReturnAnError() {
     driver.get(pages.ajaxyPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(100));
-    assertThatExceptionOfType(WebDriverException.class).isThrownBy(
-        () -> executor.executeAsyncScript("window.location = '" + pages.dynamicPage + "';"));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(100));
+    assertThatExceptionOfType(WebDriverException.class)
+        .isThrownBy(
+            () -> executor.executeAsyncScript("window.location = '" + pages.dynamicPage + "';"));
   }
 
   @Test
-  public void shouldCatchErrorsWhenExecutingInitialScript() {
+  void shouldCatchErrorsWhenExecutingInitialScript() {
     driver.get(pages.ajaxyPage);
     assertThatExceptionOfType(WebDriverException.class)
         .isThrownBy(() -> executor.executeAsyncScript("throw Error('you should catch this!');"));
   }
 
   @Test
-  public void shouldNotTimeoutWithMultipleCallsTheFirstOneBeingSynchronous() {
+  void shouldNotTimeoutWithMultipleCallsTheFirstOneBeingSynchronous() {
     driver.get(pages.ajaxyPage);
     assertThat((Boolean) executor.executeAsyncScript("arguments[arguments.length - 1](true);"))
         .isTrue();
-    assertThat((Boolean) executor.executeAsyncScript(
-        "var cb = arguments[arguments.length - 1]; window.setTimeout(function(){cb(true);}, 9);"))
+    assertThat(
+            (Boolean)
+                executor.executeAsyncScript(
+                    "var cb = arguments[arguments.length - 1];"
+                        + " window.setTimeout(function(){cb(true);}, 9);"))
         .isTrue();
   }
 
@@ -221,27 +230,27 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(IE)
   @NotYetImplemented(SAFARI)
   @Ignore(FIREFOX)
-  @NotYetImplemented(HTMLUNIT)
   public void shouldCatchErrorsWithMessageAndStacktraceWhenExecutingInitialScript() {
     driver.get(pages.ajaxyPage);
-    String js = "function functionB() { throw Error('errormessage'); };"
-              + "function functionA() { functionB(); };"
-              + "functionA();";
+    String js =
+        "function functionB() { throw Error('errormessage'); };"
+            + "function functionA() { functionB(); };"
+            + "functionA();";
     assertThatExceptionOfType(WebDriverException.class)
         .isThrownBy(() -> executor.executeAsyncScript(js))
         .withMessageContaining("errormessage")
-        .satisfies(t -> {
-          Throwable rootCause = getRootCause(t);
-          assertThat(rootCause).hasMessageContaining("errormessage");
-          assertThat(Arrays.asList(rootCause.getStackTrace()))
-              .extracting(StackTraceElement::getMethodName)
-              .contains("functionB");
-        });
-
+        .satisfies(
+            t -> {
+              Throwable rootCause = getRootCause(t);
+              assertThat(rootCause).hasMessageContaining("errormessage");
+              assertThat(List.of(rootCause.getStackTrace()))
+                  .extracting(StackTraceElement::getMethodName)
+                  .contains("functionB");
+            });
   }
 
   @Test
-  public void shouldBeAbleToExecuteAsynchronousScripts() {
+  void shouldBeAbleToExecuteAsynchronousScripts() {
     driver.get(pages.ajaxyPage);
 
     WebElement typer = driver.findElement(By.name("typer"));
@@ -252,15 +261,18 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
     driver.findElement(By.name("submit")).click();
 
     assertThat(getNumDivElements())
-        .describedAs("There should only be 1 DIV at this point, which is used for the butter message")
+        .describedAs(
+            "There should only be 1 DIV at this point, which is used for the butter message")
         .isEqualTo(1);
 
-    driver.manage().timeouts().setScriptTimeout(Duration.ofSeconds(15));
-    String text = (String) executor.executeAsyncScript(
-        "var callback = arguments[arguments.length - 1];"
-        + "window.registerListener(arguments[arguments.length - 1]);");
+    driver.manage().timeouts().scriptTimeout(Duration.ofSeconds(15));
+    String text =
+        (String)
+            executor.executeAsyncScript(
+                "var callback = arguments[arguments.length - 1];"
+                    + "window.registerListener(arguments[arguments.length - 1]);");
     assertThat(text).isEqualTo("bob");
-    assertThat(typer.getAttribute("value")).isEqualTo("");
+    assertThat(typer.getAttribute("value")).isEmpty();
 
     assertThat(getNumDivElements())
         .describedAs("There should be 1 DIV (for the butter message) + 1 DIV (for the new label)")
@@ -268,40 +280,43 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void shouldBeAbleToPassMultipleArgumentsToAsyncScripts() {
+  void shouldBeAbleToPassMultipleArgumentsToAsyncScripts() {
     driver.get(pages.ajaxyPage);
-    Number result = (Number) executor.executeAsyncScript(
-        "arguments[arguments.length - 1](arguments[0] + arguments[1]);", 1, 2);
+    Number result =
+        (Number)
+            executor.executeAsyncScript(
+                "arguments[arguments.length - 1](arguments[0] + arguments[1]);", 1, 2);
     assertThat(result.intValue()).isEqualTo(3);
   }
 
   @Test
-  public void shouldBeAbleToMakeXMLHttpRequestsAndWaitForTheResponse() {
+  void shouldBeAbleToMakeXMLHttpRequestsAndWaitForTheResponse() {
     String script =
-        "var url = arguments[0];" +
-        "var callback = arguments[arguments.length - 1];" +
-        // Adapted from http://www.quirksmode.org/js/xmlhttp.html
-        "var XMLHttpFactories = [" +
-        "  function () {return new XMLHttpRequest()}," +
-        "  function () {return new ActiveXObject('Msxml2.XMLHTTP')}," +
-        "  function () {return new ActiveXObject('Msxml3.XMLHTTP')}," +
-        "  function () {return new ActiveXObject('Microsoft.XMLHTTP')}" +
-        "];" +
-        "var xhr = false;" +
-        "while (!xhr && XMLHttpFactories.length) {" +
-        "  try {" +
-        "    xhr = XMLHttpFactories.shift().call();" +
-        "  } catch (e) {}" +
-        "}" +
-        "if (!xhr) throw Error('unable to create XHR object');" +
-        "xhr.open('GET', url, true);" +
-        "xhr.onreadystatechange = function() {" +
-        "  if (xhr.readyState == 4) callback(xhr.responseText);" +
-        "};" +
-        "xhr.send('');"; // empty string to stop firefox 3 from choking
+        "var url = arguments[0];"
+            + "var callback = arguments[arguments.length - 1];"
+            +
+            // Adapted from http://www.quirksmode.org/js/xmlhttp.html
+            "var XMLHttpFactories = ["
+            + "  function () {return new XMLHttpRequest()},"
+            + "  function () {return new ActiveXObject('Msxml2.XMLHTTP')},"
+            + "  function () {return new ActiveXObject('Msxml3.XMLHTTP')},"
+            + "  function () {return new ActiveXObject('Microsoft.XMLHTTP')}"
+            + "];"
+            + "var xhr = false;"
+            + "while (!xhr && XMLHttpFactories.length) {"
+            + "  try {"
+            + "    xhr = XMLHttpFactories.shift().call();"
+            + "  } catch (e) {}"
+            + "}"
+            + "if (!xhr) throw Error('unable to create XHR object');"
+            + "xhr.open('GET', url, true);"
+            + "xhr.onreadystatechange = function() {"
+            + "  if (xhr.readyState == 4) callback(xhr.responseText);"
+            + "};"
+            + "xhr.send('');"; // empty string to stop firefox 3 from choking
 
     driver.get(pages.ajaxyPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofSeconds(3));
+    driver.manage().timeouts().scriptTimeout(Duration.ofSeconds(3));
     String response = (String) executor.executeAsyncScript(script, pages.sleepingPage + "?time=2");
     assertThat(response.trim())
         .isEqualTo("<html><head><title>Done</title></head><body>Slept for 2s</body></html>");
@@ -315,10 +330,13 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(value = SAFARI, reason = "Does not support alerts yet")
   public void throwsIfScriptTriggersAlert() {
     driver.get(pages.simpleTestPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
     assertThatExceptionOfType(UnhandledAlertException.class)
-        .isThrownBy(() -> executor.executeAsyncScript(
-            "setTimeout(arguments[0], 200) ; setTimeout(function() { window.alert('Look! An alert!'); }, 50);"));
+        .isThrownBy(
+            () ->
+                executor.executeAsyncScript(
+                    "setTimeout(arguments[0], 200) ; setTimeout(function() { window.alert('Look! An"
+                        + " alert!'); }, 50);"));
     // Shouldn't throw
     driver.getTitle();
   }
@@ -331,7 +349,7 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(value = SAFARI, reason = "Does not support alerts yet")
   public void throwsIfAlertHappensDuringScript() {
     driver.get(pages.slowLoadingAlertPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
     assertThatExceptionOfType(UnhandledAlertException.class)
         .isThrownBy(() -> executor.executeAsyncScript("setTimeout(arguments[0], 1000);"));
     // Shouldn't throw
@@ -346,10 +364,12 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(value = SAFARI, reason = "Does not support alerts yet")
   public void throwsIfScriptTriggersAlertWhichTimesOut() {
     driver.get(pages.simpleTestPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
     assertThatExceptionOfType(UnhandledAlertException.class)
-        .isThrownBy(() -> executor.executeAsyncScript(
-            "setTimeout(function() { window.alert('Look! An alert!'); }, 50);"));
+        .isThrownBy(
+            () ->
+                executor.executeAsyncScript(
+                    "setTimeout(function() { window.alert('Look! An alert!'); }, 50);"));
     // Shouldn't throw
     driver.getTitle();
   }
@@ -362,7 +382,7 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(value = SAFARI, reason = "Does not support alerts yet")
   public void throwsIfAlertHappensDuringScriptWhichTimesOut() {
     driver.get(pages.slowLoadingAlertPage);
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
     assertThatExceptionOfType(UnhandledAlertException.class)
         .isThrownBy(() -> executor.executeAsyncScript(""));
     // Shouldn't throw
@@ -376,19 +396,22 @@ public class ExecutingAsyncJavascriptTest extends JupiterTestBase {
   @Ignore(FIREFOX)
   @Ignore(value = SAFARI, reason = "Does not support alerts yet")
   public void includesAlertTextInUnhandledAlertException() {
-    driver.manage().timeouts().setScriptTimeout(Duration.ofMillis(5000));
+    driver.manage().timeouts().scriptTimeout(Duration.ofMillis(5000));
     String alertText = "Look! An alert!";
     assertThatExceptionOfType(UnhandledAlertException.class)
-        .isThrownBy(() -> executor.executeAsyncScript(
-            "setTimeout(arguments[0], 200) ; setTimeout(function() { window.alert('" + alertText
-            + "'); }, 50);"))
+        .isThrownBy(
+            () ->
+                executor.executeAsyncScript(
+                    "setTimeout(arguments[0], 200) ; setTimeout(function() { window.alert('"
+                        + alertText
+                        + "'); }, 50);"))
         .satisfies(t -> assertThat(t.getAlertText()).isEqualTo(alertText));
   }
 
   private long getNumDivElements() {
     // Selenium does not support "findElements" yet, so we have to do this through a script.
-    return (Long) ((JavascriptExecutor) driver).executeScript(
-        "return document.getElementsByTagName('div').length;");
+    return (Long)
+        ((JavascriptExecutor) driver)
+            .executeScript("return document.getElementsByTagName('div').length;");
   }
-
 }
