@@ -17,17 +17,21 @@
 
 package org.openqa.selenium;
 
+import static com.google.common.base.Throwables.getRootCause;
+import static java.nio.charset.StandardCharsets.US_ASCII;
+import static java.util.Collections.singletonList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
+import static org.openqa.selenium.By.id;
+import static org.openqa.selenium.testing.drivers.Browser.CHROME;
+import static org.openqa.selenium.testing.drivers.Browser.EDGE;
+import static org.openqa.selenium.testing.drivers.Browser.FIREFOX;
+import static org.openqa.selenium.testing.drivers.Browser.IE;
+import static org.openqa.selenium.testing.drivers.Browser.SAFARI;
+
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.Timeout;
-import org.openqa.selenium.build.InProject;
-import org.openqa.selenium.testing.Ignore;
-import org.openqa.selenium.testing.JupiterTestBase;
-import org.openqa.selenium.testing.NeedsFreshDriver;
-import org.openqa.selenium.testing.NotYetImplemented;
-
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -39,23 +43,16 @@ import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
+import org.openqa.selenium.build.InProject;
+import org.openqa.selenium.testing.Ignore;
+import org.openqa.selenium.testing.JupiterTestBase;
+import org.openqa.selenium.testing.NeedsFreshDriver;
+import org.openqa.selenium.testing.NotYetImplemented;
 
-import static com.google.common.base.Throwables.getRootCause;
-import static java.nio.charset.StandardCharsets.US_ASCII;
-import static java.util.Collections.singletonList;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
-import static org.junit.jupiter.api.Assertions.fail;
-import static org.junit.jupiter.api.Assumptions.assumeTrue;
-import static org.openqa.selenium.By.id;
-import static org.openqa.selenium.testing.drivers.Browser.CHROME;
-import static org.openqa.selenium.testing.drivers.Browser.EDGE;
-import static org.openqa.selenium.testing.drivers.Browser.FIREFOX;
-import static org.openqa.selenium.testing.drivers.Browser.HTMLUNIT;
-import static org.openqa.selenium.testing.drivers.Browser.IE;
-import static org.openqa.selenium.testing.drivers.Browser.SAFARI;
-
-public class ExecutingJavascriptTest extends JupiterTestBase {
+class ExecutingJavascriptTest extends JupiterTestBase {
 
   @BeforeEach
   public void setUp() {
@@ -67,7 +64,7 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testShouldBeAbleToExecuteSimpleJavascriptAndReturnAString() {
+  void testShouldBeAbleToExecuteSimpleJavascriptAndReturnAString() {
     driver.get(pages.xhtmlTestPage);
 
     Object result = executeScript("return document.title;");
@@ -76,7 +73,7 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testShouldBeAbleToExecuteSimpleJavascriptAndReturnALong() {
+  void testShouldBeAbleToExecuteSimpleJavascriptAndReturnALong() {
     driver.get(pages.nestedPage);
 
     Object result = executeScript("return document.getElementsByName('checky').length;");
@@ -86,7 +83,7 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testShouldBeAbleToExecuteSimpleJavascriptAndReturnAWebElement() {
+  void testShouldBeAbleToExecuteSimpleJavascriptAndReturnAWebElement() {
     driver.get(pages.xhtmlTestPage);
 
     Object result = executeScript("return document.getElementById('id1');");
@@ -96,7 +93,7 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testShouldBeAbleToExecuteSimpleJavascriptAndReturnABoolean() {
+  void testShouldBeAbleToExecuteSimpleJavascriptAndReturnABoolean() {
     driver.get(pages.xhtmlTestPage);
 
     Object result = executeScript("return true;");
@@ -107,11 +104,10 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
 
   @SuppressWarnings("unchecked")
   @Test
-  public void testShouldBeAbleToExecuteSimpleJavascriptAndReturnAStringsArray() {
+  void testShouldBeAbleToExecuteSimpleJavascriptAndReturnAStringsArray() {
     driver.get(pages.javascriptPage);
 
-    Object result = ((JavascriptExecutor) driver).executeScript(
-      "return ['zero', 'one', 'two'];");
+    Object result = ((JavascriptExecutor) driver).executeScript("return ['zero', 'one', 'two'];");
 
     assertThat(result).isInstanceOf(List.class);
     assertThat((List<?>) result).isEqualTo(ImmutableList.of("zero", "one", "two"));
@@ -119,7 +115,7 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
 
   @SuppressWarnings("unchecked")
   @Test
-  public void testShouldBeAbleToExecuteSimpleJavascriptAndReturnAnArray() {
+  void testShouldBeAbleToExecuteSimpleJavascriptAndReturnAnArray() {
     driver.get(pages.javascriptPage);
     List<Object> expectedResult = new ArrayList<>();
     expectedResult.add("zero");
@@ -132,44 +128,44 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
     assertThat((List<Object>) result).isEqualTo(expectedResult);
   }
 
-
   @SuppressWarnings("unchecked")
   @Test
-  public void testShouldBeAbleToExecuteJavascriptAndReturnABasicObjectLiteral() {
+  void testShouldBeAbleToExecuteJavascriptAndReturnABasicObjectLiteral() {
     driver.get(pages.javascriptPage);
 
     Object result = executeScript("return {abc: '123', tired: false};");
     assertThat(result).isInstanceOf(Map.class);
     Map<String, Object> map = (Map<String, Object>) result;
 
-    Map<String, Object> expected = ImmutableMap.of(
-      "abc", "123",
-      "tired", false);
+    Map<String, Object> expected = ImmutableMap.of("abc", "123", "tired", false);
 
     // Cannot do an exact match; Firefox 4 inserts a few extra keys in our object; this is OK, as
     // long as the expected keys are there.
     assertThat(map.size()).isGreaterThanOrEqualTo(expected.size());
     for (Map.Entry<String, Object> entry : expected.entrySet()) {
-      assertThat(map.get(entry.getKey())).as("Value by key %s, )", entry.getKey()).isEqualTo(entry.getValue());
+      assertThat(map.get(entry.getKey()))
+          .as("Value by key %s, )", entry.getKey())
+          .isEqualTo(entry.getValue());
     }
   }
 
   @SuppressWarnings("unchecked")
   @Test
-  public void testShouldBeAbleToExecuteSimpleJavascriptAndReturnAnObjectLiteral() {
+  void testShouldBeAbleToExecuteSimpleJavascriptAndReturnAnObjectLiteral() {
     driver.get(pages.javascriptPage);
 
-    Map<String, Object> expectedResult = ImmutableMap.of(
-      "foo", "bar",
-      "baz", Arrays.asList("a", "b", "c"),
-      "person", ImmutableMap.of(
-        "first", "John",
-        "last", "Doe")
-    );
+    Map<String, Object> expectedResult =
+        ImmutableMap.of(
+            "foo", "bar",
+            "baz", Arrays.asList("a", "b", "c"),
+            "person",
+                ImmutableMap.of(
+                    "first", "John",
+                    "last", "Doe"));
 
-    Object result = executeScript(
-      "return {foo:'bar', baz: ['a', 'b', 'c'], " +
-        "person: {first: 'John',last: 'Doe'}};");
+    Object result =
+        executeScript(
+            "return {foo:'bar', baz: ['a', 'b', 'c'], " + "person: {first: 'John',last: 'Doe'}};");
     assertThat(result).isInstanceOf(Map.class);
 
     Map<String, Object> map = (Map<String, Object>) result;
@@ -216,7 +212,7 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testPassingAndReturningALongShouldReturnAWholeNumber() {
+  void testPassingAndReturningALongShouldReturnAWholeNumber() {
     driver.get(pages.javascriptPage);
     Long expectedResult = 1L;
     Object result = executeScript("return arguments[0];", expectedResult);
@@ -224,7 +220,7 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testReturningOverflownLongShouldReturnADouble() {
+  void testReturningOverflownLongShouldReturnADouble() {
     driver.get(pages.javascriptPage);
     Double expectedResult = 6.02214129e+23;
     Object result = executeScript("return arguments[0];", expectedResult);
@@ -232,7 +228,7 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testPassingAndReturningADoubleShouldReturnADecimal() {
+  void testPassingAndReturningADoubleShouldReturnADecimal() {
     driver.get(pages.javascriptPage);
     Double expectedResult = 1.2;
     Object result = executeScript("return arguments[0];", expectedResult);
@@ -240,12 +236,12 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testShouldThrowAnExceptionWhenTheJavascriptIsBad() {
+  void testShouldThrowAnExceptionWhenTheJavascriptIsBad() {
     driver.get(pages.xhtmlTestPage);
 
     assertThatExceptionOfType(WebDriverException.class)
-      .isThrownBy(() -> executeScript("return squiggle();"))
-      .satisfies(t -> assertThat(t.getMessage()).doesNotStartWith("null "));
+        .isThrownBy(() -> executeScript("return squiggle();"))
+        .satisfies(t -> assertThat(t.getMessage()).doesNotStartWith("null "));
   }
 
   @Test
@@ -254,27 +250,28 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   @Ignore(IE)
   @NotYetImplemented(SAFARI)
   @Ignore(FIREFOX)
-  @NotYetImplemented(HTMLUNIT)
   public void testShouldThrowAnExceptionWithMessageAndStacktraceWhenTheJavascriptIsBad() {
     driver.get(pages.xhtmlTestPage);
 
-    String js = "function functionB() { throw Error('errormessage'); };"
-      + "function functionA() { functionB(); };"
-      + "functionA();";
+    String js =
+        "function functionB() { throw Error('errormessage'); };"
+            + "function functionA() { functionB(); };"
+            + "functionA();";
     assertThatExceptionOfType(WebDriverException.class)
-      .isThrownBy(() -> executeScript(js))
-      .withMessageContaining("errormessage")
-      .satisfies(t -> {
-        Throwable rootCause = getRootCause(t);
-        assertThat(rootCause).hasMessageContaining("errormessage");
-        assertThat(Arrays.asList(rootCause.getStackTrace()))
-          .extracting(StackTraceElement::getMethodName)
-          .contains("functionB");
-      });
+        .isThrownBy(() -> executeScript(js))
+        .withMessageContaining("errormessage")
+        .satisfies(
+            t -> {
+              Throwable rootCause = getRootCause(t);
+              assertThat(rootCause).hasMessageContaining("errormessage");
+              assertThat(List.of(rootCause.getStackTrace()))
+                  .extracting(StackTraceElement::getMethodName)
+                  .contains("functionB");
+            });
   }
 
   @Test
-  public void testShouldBeAbleToCallFunctionsDefinedOnThePage() {
+  void testShouldBeAbleToCallFunctionsDefinedOnThePage() {
     driver.get(pages.javascriptPage);
     executeScript("displayMessage('I like cheese');");
     String text = driver.findElement(By.id("result")).getText();
@@ -283,58 +280,60 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testShouldBeAbleToPassAStringAnAsArgument() {
+  void testShouldBeAbleToPassAStringAnAsArgument() {
     driver.get(pages.javascriptPage);
     String value =
-      (String) executeScript("return arguments[0] == 'fish' ? 'fish' : 'not fish';", "fish");
+        (String) executeScript("return arguments[0] == 'fish' ? 'fish' : 'not fish';", "fish");
 
     assertThat(value).isEqualTo("fish");
   }
 
   @Test
-  public void testShouldBeAbleToPassABooleanAsArgument() {
+  void testShouldBeAbleToPassABooleanAsArgument() {
     driver.get(pages.javascriptPage);
     boolean value = (Boolean) executeScript("return arguments[0] == true;", true);
     assertThat(value).isTrue();
   }
 
   @Test
-  public void testShouldBeAbleToPassANumberAnAsArgument() {
+  void testShouldBeAbleToPassANumberAnAsArgument() {
     driver.get(pages.javascriptPage);
     boolean value = (Boolean) executeScript("return arguments[0] == 1 ? true : false;", 1);
     assertThat(value).isTrue();
   }
 
   @Test
-  public void testShouldBeAbleToPassAWebElementAsArgument() {
+  void testShouldBeAbleToPassAWebElementAsArgument() {
     driver.get(pages.javascriptPage);
     WebElement button = driver.findElement(By.id("plainButton"));
     String value =
-      (String) executeScript(
-        "arguments[0]['flibble'] = arguments[0].getAttribute('id'); return arguments[0]['flibble'];",
-        button);
+        (String)
+            executeScript(
+                "arguments[0]['flibble'] = arguments[0].getAttribute('id'); return"
+                    + " arguments[0]['flibble'];",
+                button);
 
     assertThat(value).isEqualTo("plainButton");
   }
 
   @Test
-  public void testPassingArrayAsOnlyArgumentFlattensArray() {
+  void testPassingArrayAsOnlyArgumentFlattensArray() {
     driver.get(pages.javascriptPage);
-    Object[] array = new Object[]{"zero", 1, true, 42.4242, false};
+    Object[] array = new Object[] {"zero", 1, true, 42.4242, false};
     String value = (String) executeScript("return arguments[0]", array);
     assertThat(value).isEqualTo(array[0]);
   }
 
   @Test
-  public void testShouldBeAbleToPassAnArrayAsAdditionalArgument() {
+  void testShouldBeAbleToPassAnArrayAsAdditionalArgument() {
     driver.get(pages.javascriptPage);
-    Object[] array = new Object[]{"zero", 1, true, 42.4242, false};
+    Object[] array = new Object[] {"zero", 1, true, 42.4242, false};
     long length = (Long) executeScript("return arguments[1].length", "string", array);
     assertThat(length).isEqualTo(array.length);
   }
 
   @Test
-  public void testShouldBeAbleToPassACollectionAsArgument() {
+  void testShouldBeAbleToPassACollectionAsArgument() {
     driver.get(pages.javascriptPage);
     Collection<Object> collection = new ArrayList<>();
     collection.add("Cheddar");
@@ -353,21 +352,21 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testShouldThrowAnExceptionIfAnArgumentIsNotValid() {
+  void testShouldThrowAnExceptionIfAnArgumentIsNotValid() {
     driver.get(pages.javascriptPage);
     assertThatExceptionOfType(IllegalArgumentException.class)
-      .isThrownBy(() -> executeScript("return arguments[0];", driver));
+        .isThrownBy(() -> executeScript("return arguments[0];", driver));
   }
 
   @Test
-  public void testShouldBeAbleToPassInMoreThanOneArgument() {
+  void testShouldBeAbleToPassInMoreThanOneArgument() {
     driver.get(pages.javascriptPage);
     String result = (String) executeScript("return arguments[0] + arguments[1];", "one", "two");
     assertThat(result).isEqualTo("onetwo");
   }
 
   @Test
-  public void testShouldBeAbleToGrabTheBodyOfFrameOnceSwitchedTo() {
+  void testShouldBeAbleToGrabTheBodyOfFrameOnceSwitchedTo() {
     driver.get(pages.richTextPage);
 
     driver.switchTo().frame("editFrame");
@@ -375,26 +374,26 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
     String text = body.getText();
     driver.switchTo().defaultContent();
 
-    assertThat(text).isEqualTo("");
+    assertThat(text).isEmpty();
   }
 
   @SuppressWarnings("unchecked")
   @Test
-  public void testShouldBeAbleToReturnAnArrayOfWebElements() {
+  void testShouldBeAbleToReturnAnArrayOfWebElements() {
     driver.get(pages.formPage);
 
-    List<WebElement> items = (List<WebElement>) executeScript(
-      "return document.getElementsByName('snack');");
+    List<WebElement> items =
+        (List<WebElement>) executeScript("return document.getElementsByName('snack');");
 
     assertThat(items).isNotEmpty();
   }
 
   @Test
-  public void testJavascriptStringHandlingShouldWorkAsExpected() {
+  void testJavascriptStringHandlingShouldWorkAsExpected() {
     driver.get(pages.javascriptPage);
 
     String value = (String) executeScript("return '';");
-    assertThat(value).isEqualTo("");
+    assertThat(value).isEmpty();
 
     value = (String) executeScript("return undefined;");
     assertThat(value).isNull();
@@ -404,21 +403,21 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testShouldBeAbleToExecuteABigChunkOfJavascriptCode() throws IOException {
+  void testShouldBeAbleToExecuteABigChunkOfJavascriptCode() throws IOException {
     driver.get(pages.javascriptPage);
 
     Path jqueryFile = InProject.locate("common/src/web/js/jquery-3.5.1.min.js");
-    String jquery = new String(Files.readAllBytes(jqueryFile), US_ASCII);
+    String jquery = Files.readString(jqueryFile, US_ASCII);
     assertThat(jquery.length())
-      .describedAs("The javascript code should be at least 50 KB.")
-      .isGreaterThan(50000);
+        .describedAs("The javascript code should be at least 50 KB.")
+        .isGreaterThan(50000);
     // This should not throw an exception ...
     executeScript(jquery);
   }
 
   @SuppressWarnings("unchecked")
   @Test
-  public void testShouldBeAbleToExecuteScriptAndReturnElementsList() {
+  void testShouldBeAbleToExecuteScriptAndReturnElementsList() {
     driver.get(pages.formPage);
     String scriptToExec = "return document.getElementsByName('snack');";
 
@@ -429,8 +428,6 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
 
   @NeedsFreshDriver
   @Test
-  @NotYetImplemented(value = HTMLUNIT,
-    reason = "HtmlUnit: can't execute JavaScript before a page is loaded")
   @Ignore(SAFARI)
   public void testShouldBeAbleToExecuteScriptOnNoPage() {
     String text = (String) executeScript("return 'test';");
@@ -438,7 +435,7 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testShouldBeAbleToCreateAPersistentValue() {
+  void testShouldBeAbleToCreateAPersistentValue() {
     driver.get(pages.formPage);
 
     executeScript("document.alerts = []");
@@ -449,20 +446,21 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   }
 
   @Test
-  public void testCanHandleAnArrayOfElementsAsAnObjectArray() {
+  void testCanHandleAnArrayOfElementsAsAnObjectArray() {
     driver.get(pages.formPage);
 
     List<WebElement> forms = driver.findElements(By.tagName("form"));
-    Object[] args = new Object[]{forms};
+    Object[] args = new Object[] {forms};
 
-    String name = (String) ((JavascriptExecutor) driver).executeScript(
-      "return arguments[0][0].tagName", args);
+    String name =
+        (String)
+            ((JavascriptExecutor) driver).executeScript("return arguments[0][0].tagName", args);
 
     assertThat(name).isEqualToIgnoringCase("form");
   }
 
   @Test
-  public void testCanPassAMapAsAParameter() {
+  void testCanPassAMapAsAParameter() {
     driver.get(pages.simpleTestPage);
 
     List<Integer> nums = Arrays.asList(1, 2);
@@ -482,25 +480,24 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
 
     driver.get(pages.simpleTestPage);
 
-    Map<String, Object> args = ImmutableMap.of(
-      "key", Arrays.asList("a", new Object[]{"zero", 1, true, 42.4242, false, el}, "c"));
+    Map<String, Object> args =
+        ImmutableMap.of(
+            "key", Arrays.asList("a", new Object[] {"zero", 1, true, 42.4242, false, el}, "c"));
 
     assertThatExceptionOfType(StaleElementReferenceException.class)
-      .isThrownBy(() -> executeScript("return undefined;", args));
+        .isThrownBy(() -> executeScript("return undefined;", args));
   }
 
   @Test
   @Ignore(IE)
-  public void testShouldBeAbleToReturnADateObject() {
+  @Ignore(value = CHROME, reason = "https://bugs.chromium.org/p/chromedriver/issues/detail?id=4395")
+  @Ignore(value = EDGE, reason = "https://bugs.chromium.org/p/chromedriver/issues/detail?id=4395")
+  public void testShouldBeAbleToReturnADateObject() throws ParseException {
     driver.get(pages.simpleTestPage);
 
     String date = (String) executeScript("return new Date();");
 
-    try {
-      new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'").parse(date);
-    } catch (ParseException e) {
-      fail();
-    }
+    new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'").parse(date);
   }
 
   @Test
@@ -509,7 +506,9 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   @NotYetImplemented(EDGE)
   @Ignore(IE)
   @NotYetImplemented(SAFARI)
-  @NotYetImplemented(value = FIREFOX, reason = "https://bugzilla.mozilla.org/show_bug.cgi?id=1502656")
+  @NotYetImplemented(
+      value = FIREFOX,
+      reason = "https://bugzilla.mozilla.org/show_bug.cgi?id=1502656")
   public void shouldReturnDocumentElementIfDocumentIsReturned() {
     driver.get(pages.simpleTestPage);
 
@@ -522,7 +521,6 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
   @Test
   @Timeout(10)
   @Ignore(value = IE, reason = "returns WebElement")
-  @Ignore(HTMLUNIT)
   public void shouldHandleObjectThatThatHaveToJSONMethod() {
     driver.get(pages.simpleTestPage);
 
@@ -533,26 +531,27 @@ public class ExecutingJavascriptTest extends JupiterTestBase {
 
   @Test
   @Timeout(10)
-  @Ignore(HTMLUNIT)
   public void shouldHandleRecursiveStructures() {
     driver.get(pages.simpleTestPage);
 
-    assertThatExceptionOfType(JavascriptException.class).isThrownBy(() -> executeScript(
-      "var obj1 = {}; var obj2 = {}; obj1['obj2'] = obj2; obj2['obj1'] = obj1; return obj1"));
+    assertThatExceptionOfType(JavascriptException.class)
+        .isThrownBy(
+            () ->
+                executeScript(
+                    "var obj1 = {}; var obj2 = {}; obj1['obj2'] = obj2; obj2['obj1'] = obj1; return"
+                        + " obj1"));
   }
 
   @Test
-  public void shouldUnwrapDeeplyNestedWebElementsAsArguments() {
+  void shouldUnwrapDeeplyNestedWebElementsAsArguments() {
     driver.get(pages.simpleTestPage);
 
     WebElement expected = driver.findElement(id("oneline"));
 
-    Object args = ImmutableMap.of(
-      "top", ImmutableMap.of(
-        "key", singletonList(ImmutableMap.of(
-          "subkey", expected))));
-    WebElement seen = (WebElement) executeScript(
-      "return arguments[0].top.key[0].subkey", args);
+    Object args =
+        ImmutableMap.of(
+            "top", ImmutableMap.of("key", singletonList(ImmutableMap.of("subkey", expected))));
+    WebElement seen = (WebElement) executeScript("return arguments[0].top.key[0].subkey", args);
 
     assertThat(seen).isEqualTo(expected);
   }
