@@ -21,17 +21,42 @@ import static java.time.Duration.ofSeconds;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.InstanceOfAssertFactories.MAP;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
 import static org.openqa.selenium.remote.http.Contents.string;
+import static org.openqa.selenium.remote.http.HttpMethod.DELETE;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
 import static org.openqa.selenium.remote.http.HttpMethod.POST;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-
+import java.io.File;
+import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.time.Clock;
+import java.time.Duration;
+import java.time.Instant;
+import java.time.ZoneId;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Consumer;
+import java.util.function.Function;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInfo;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.ImmutableCapabilities;
 import org.openqa.selenium.NoSuchSessionException;
@@ -48,6 +73,7 @@ import org.openqa.selenium.grid.data.NodeStatus;
 import org.openqa.selenium.grid.data.Session;
 import org.openqa.selenium.grid.data.SessionClosedEvent;
 import org.openqa.selenium.grid.node.local.LocalNode;
+import org.openqa.selenium.grid.node.local.LocalNode.Builder;
 import org.openqa.selenium.grid.node.remote.RemoteNode;
 import org.openqa.selenium.grid.security.Secret;
 import org.openqa.selenium.grid.testing.EitherAssert;
@@ -70,31 +96,14 @@ import org.openqa.selenium.remote.tracing.Tracer;
 import org.openqa.selenium.support.ui.FluentWait;
 import org.openqa.selenium.support.ui.Wait;
 
-import java.io.ByteArrayInputStream;
-import java.io.File;
-import java.io.IOException;
-import java.io.UncheckedIOException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.time.Clock;
-import java.time.Duration;
-import java.time.Instant;
-import java.time.ZoneId;
-import java.util.Collections;
-import java.util.Map;
-import java.util.UUID;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicReference;
-
-public class NodeTest {
+class NodeTest {
 
   private Tracer tracer;
   private EventBus bus;
   private LocalNode local;
+  private LocalNode local2;
   private Node node;
+  private Node node2;
   private ImmutableCapabilities stereotype;
   private ImmutableCapabilities caps;
   private URI uri;
@@ -105,14 +114,19 @@ public class NodeTest {
   }
 
   @BeforeEach
-  public void setUp() throws URISyntaxException {
+  public void setUp(TestInfo testInfo) throws URISyntaxException {
     tracer = DefaultTestTracer.createTracer();
     bus = new GuavaEventBus();
 
     registrationSecret = new Secret("sussex charmer");
+    boolean isDownloadsTestCase = testInfo.getDisplayName().equalsIgnoreCase("DownloadsTestCase");
 
     stereotype = new ImmutableCapabilities("browserName", "cheese");
     caps = new ImmutableCapabilities("browserName", "cheese");
+    if (isDownloadsTestCase) {
+      stereotype = new ImmutableCapabilities("browserName", "chrome", "se:downloadsEnabled", true);
+      caps = new ImmutableCapabilities("browserName", "chrome", "se:downloadsEnabled", true);
+    }
 
     uri = new URI("http://localhost:1234");
 
@@ -127,43 +141,63 @@ public class NodeTest {
       }
     }
 
-    local = LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, c) -> new Handler(c)))
-        .add(caps, new TestSessionFactory((id, c) -> new Handler(c)))
-        .add(caps, new TestSessionFactory((id, c) -> new Handler(c)))
-        .maximumConcurrentSessions(2)
-        .build();
+    Builder builder =
+        LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
+            .add(caps, new TestSessionFactory((id, c) -> new Handler(c)))
+            .add(caps, new TestSessionFactory((id, c) -> new Handler(c)))
+            .add(caps, new TestSessionFactory((id, c) -> new Handler(c)))
+            .maximumConcurrentSessions(2);
+    if (isDownloadsTestCase) {
+      builder = builder.enableManagedDownloads(true).sessionTimeout(Duration.ofSeconds(1));
+    }
+    local = builder.build();
+    local2 = builder.build();
 
-    node = new RemoteNode(
-        tracer,
-        new PassthroughHttpClient.Factory(local),
-        new NodeId(UUID.randomUUID()),
-        uri,
-        registrationSecret,
-        ImmutableSet.of(caps));
+    node =
+        new RemoteNode(
+            tracer,
+            new PassthroughHttpClient.Factory(local),
+            new NodeId(UUID.randomUUID()),
+            uri,
+            registrationSecret,
+            local.getSessionTimeout(),
+            ImmutableSet.of(caps));
+
+    node2 =
+        new RemoteNode(
+            tracer,
+            new PassthroughHttpClient.Factory(local2),
+            new NodeId(UUID.randomUUID()),
+            uri,
+            registrationSecret,
+            local2.getSessionTimeout(),
+            ImmutableSet.of(caps));
   }
 
   @Test
-  public void shouldRefuseToCreateASessionIfNoFactoriesAttached() {
+  void shouldRefuseToCreateASessionIfNoFactoriesAttached() {
     Node local = LocalNode.builder(tracer, bus, uri, uri, registrationSecret).build();
     HttpClient.Factory clientFactory = new PassthroughHttpClient.Factory(local);
-    Node node = new RemoteNode(
-      tracer,
-      clientFactory,
-      new NodeId(UUID.randomUUID()),
-      uri,
-      registrationSecret,
-      ImmutableSet.of());
+    Node node =
+        new RemoteNode(
+            tracer,
+            clientFactory,
+            new NodeId(UUID.randomUUID()),
+            uri,
+            registrationSecret,
+            local.getSessionTimeout(),
+            ImmutableSet.of());
 
-    Either<WebDriverException, CreateSessionResponse> response = node.newSession(
-      createSessionRequest(caps));
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
 
     assertThatEither(response).isLeft();
   }
 
   @Test
-  public void shouldCreateASessionIfTheCorrectCapabilitiesArePassedToIt() {
-    Either<WebDriverException, CreateSessionResponse> response = node.newSession(createSessionRequest(caps));
+  void shouldCreateASessionIfTheCorrectCapabilitiesArePassedToIt() {
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
 
     CreateSessionResponse sessionResponse = response.right();
@@ -171,59 +205,75 @@ public class NodeTest {
   }
 
   @Test
-  public void shouldRetryIfNoMatchingSlotIsAvailable() {
-    Node local = LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
-      .add(caps, new SessionFactory() {
-        @Override
-        public Either<WebDriverException, ActiveSession> apply(
-          CreateSessionRequest createSessionRequest) {
-          return Either.left(new SessionNotCreatedException("HelperFactory for testing"));
-        }
+  void shouldRetryIfNoMatchingSlotIsAvailable() {
+    Node local =
+        LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
+            .add(
+                caps,
+                new SessionFactory() {
+                  @Override
+                  public Capabilities getStereotype() {
+                    return null;
+                  }
 
-        @Override
-        public boolean test(Capabilities capabilities) {
-          return false;
-        }
-      })
-      .build();
+                  @Override
+                  public Either<WebDriverException, ActiveSession> apply(
+                      CreateSessionRequest createSessionRequest) {
+                    return Either.left(new SessionNotCreatedException("HelperFactory for testing"));
+                  }
+
+                  @Override
+                  public boolean test(Capabilities capabilities) {
+                    return false;
+                  }
+                })
+            .build();
 
     HttpClient.Factory clientFactory = new PassthroughHttpClient.Factory(local);
-    Node node = new RemoteNode(
-      tracer,
-      clientFactory,
-      new NodeId(UUID.randomUUID()),
-      uri,
-      registrationSecret,
-      ImmutableSet.of(caps));
+    Node node =
+        new RemoteNode(
+            tracer,
+            clientFactory,
+            new NodeId(UUID.randomUUID()),
+            uri,
+            registrationSecret,
+            local.getSessionTimeout(),
+            ImmutableSet.of(caps));
 
     ImmutableCapabilities wrongCaps = new ImmutableCapabilities("browserName", "burger");
-    Either<WebDriverException, CreateSessionResponse> sessionResponse = node.newSession(createSessionRequest(wrongCaps));
+    Either<WebDriverException, CreateSessionResponse> sessionResponse =
+        node.newSession(createSessionRequest(wrongCaps));
 
     assertThatEither(sessionResponse).isLeft();
     assertThat(sessionResponse.left()).isInstanceOf(RetrySessionRequestException.class);
   }
 
   @Test
-  public void shouldOnlyCreateAsManySessionsAsFactories() {
-    Node node = LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, c) -> new Session(id, uri, stereotype, c, Instant.now())))
-        .build();
+  void shouldOnlyCreateAsManySessionsAsFactories() {
+    Node node =
+        LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
+            .add(
+                caps,
+                new TestSessionFactory(
+                    (id, c) -> new Session(id, uri, stereotype, c, Instant.now())))
+            .build();
 
     Either<WebDriverException, CreateSessionResponse> response =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
     Session session = response.right().getSession();
     assertThat(session).isNotNull();
 
     Either<WebDriverException, CreateSessionResponse> secondSession =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
 
     assertThatEither(secondSession).isLeft();
   }
 
   @Test
-  public void willRefuseToCreateMoreSessionsThanTheMaxSessionCount() {
-    Either<WebDriverException, CreateSessionResponse> response = node.newSession(createSessionRequest(caps));
+  void willRefuseToCreateMoreSessionsThanTheMaxSessionCount() {
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
 
     response = node.newSession(createSessionRequest(caps));
@@ -234,10 +284,11 @@ public class NodeTest {
   }
 
   @Test
-  public void stoppingASessionReducesTheNumberOfCurrentlyActiveSessions() {
-    assertThat(local.getCurrentSessionCount()).isEqualTo(0);
+  void stoppingASessionReducesTheNumberOfCurrentlyActiveSessions() {
+    assertThat(local.getCurrentSessionCount()).isZero();
 
-    Either<WebDriverException, CreateSessionResponse> response = local.newSession(createSessionRequest(caps));
+    Either<WebDriverException, CreateSessionResponse> response =
+        local.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
     Session session = response.right().getSession();
 
@@ -245,12 +296,13 @@ public class NodeTest {
 
     local.stop(session.getId());
 
-    assertThat(local.getCurrentSessionCount()).isEqualTo(0);
+    assertThat(local.getCurrentSessionCount()).isZero();
   }
 
   @Test
-  public void sessionsThatAreStoppedWillNotBeReturned() {
-    Either<WebDriverException, CreateSessionResponse> response = node.newSession(createSessionRequest(caps));
+  void sessionsThatAreStoppedWillNotBeReturned() {
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
     Session expected = response.right().getSession();
 
@@ -264,7 +316,7 @@ public class NodeTest {
   }
 
   @Test
-  public void stoppingASessionThatDoesNotExistWillThrowAnException() {
+  void stoppingASessionThatDoesNotExistWillThrowAnException() {
     assertThatExceptionOfType(NoSuchSessionException.class)
         .isThrownBy(() -> local.stop(new SessionId(UUID.randomUUID())));
 
@@ -273,7 +325,7 @@ public class NodeTest {
   }
 
   @Test
-  public void attemptingToGetASessionThatDoesNotExistWillCauseAnExceptionToBeThrown() {
+  void attemptingToGetASessionThatDoesNotExistWillCauseAnExceptionToBeThrown() {
     assertThatExceptionOfType(NoSuchSessionException.class)
         .isThrownBy(() -> local.getSession(new SessionId(UUID.randomUUID())));
 
@@ -282,7 +334,7 @@ public class NodeTest {
   }
 
   @Test
-  public void willRespondToWebDriverCommandsSentToOwnedSessions() {
+  void willRespondToWebDriverCommandsSentToOwnedSessions() {
     AtomicBoolean called = new AtomicBoolean(false);
 
     class Recording extends Session implements HttpHandler {
@@ -298,19 +350,22 @@ public class NodeTest {
       }
     }
 
-    Node local = LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, c) -> new Recording()))
-        .build();
-    Node remote = new RemoteNode(
-        tracer,
-        new PassthroughHttpClient.Factory(local),
-        new NodeId(UUID.randomUUID()),
-        uri,
-        registrationSecret,
-        ImmutableSet.of(caps));
+    Node local =
+        LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
+            .add(caps, new TestSessionFactory((id, c) -> new Recording()))
+            .build();
+    Node remote =
+        new RemoteNode(
+            tracer,
+            new PassthroughHttpClient.Factory(local),
+            new NodeId(UUID.randomUUID()),
+            uri,
+            registrationSecret,
+            local.getSessionTimeout(),
+            ImmutableSet.of(caps));
 
     Either<WebDriverException, CreateSessionResponse> response =
-      remote.newSession(createSessionRequest(caps));
+        remote.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
 
     Session session = response.right().getSession();
@@ -322,34 +377,55 @@ public class NodeTest {
   }
 
   @Test
-  public void shouldOnlyRespondToWebDriverCommandsForSessionsTheNodeOwns() {
+  void shouldOnlyRespondToWebDriverCommandsForSessionsTheNodeOwns() {
     Either<WebDriverException, CreateSessionResponse> response =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
     Session session = response.right().getSession();
 
+    Either<WebDriverException, CreateSessionResponse> response2 =
+        node2.newSession(createSessionRequest(caps));
+    assertThatEither(response2).isRight();
+    Session session2 = response2.right().getSession();
+
+    // Assert that should respond to commands for sessions Node 1 owns
     HttpRequest req = new HttpRequest(POST, String.format("/session/%s/url", session.getId()));
     assertThat(local.matches(req)).isTrue();
     assertThat(node.matches(req)).isTrue();
 
-    req = new HttpRequest(POST, String.format("/session/%s/url", UUID.randomUUID()));
-    assertThat(local.matches(req)).isFalse();
-    assertThat(node.matches(req)).isFalse();
+    // Assert that should respond to commands for sessions Node 2 owns
+    HttpRequest req2 = new HttpRequest(POST, String.format("/session/%s/url", session2.getId()));
+    assertThat(local2.matches(req2)).isTrue();
+    assertThat(node2.matches(req2)).isTrue();
+
+    // Assert that should not respond to commands for sessions Node 1 does not own
+    HttpResponse res1 = node.execute(req2);
+    assertThat(res1.getStatus()).isEqualTo(404);
+    assertThat(Contents.string(res1)).contains("invalid session id");
+
+    // Assert that should not respond to commands for sessions Node 2 does not own
+    HttpResponse res2 = node2.execute(req);
+    assertThat(res2.getStatus()).isEqualTo(404);
+    assertThat(Contents.string(res2)).contains("invalid session id");
   }
 
   @Test
-  public void aSessionThatTimesOutWillBeStoppedAndRemovedFromTheSessionMap() {
+  void aSessionThatTimesOutWillBeStoppedAndRemovedFromTheSessionMap() {
     AtomicReference<Instant> now = new AtomicReference<>(Instant.now());
 
     Clock clock = new MyClock(now);
-    Node node = LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, c) -> new Session(id, uri, stereotype, c, Instant.now())))
-        .sessionTimeout(Duration.ofMinutes(3))
-        .advanced()
-        .clock(clock)
-        .build();
+    Node node =
+        LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
+            .add(
+                caps,
+                new TestSessionFactory(
+                    (id, c) -> new Session(id, uri, stereotype, c, Instant.now())))
+            .sessionTimeout(Duration.ofMinutes(3))
+            .advanced()
+            .clock(clock)
+            .build();
     Either<WebDriverException, CreateSessionResponse> response =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
     Session session = response.right().getSession();
 
@@ -360,28 +436,36 @@ public class NodeTest {
   }
 
   @Test
-  public void shouldNotPropagateExceptionsWhenSessionCreationFails() {
-    Node local = LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, c) -> {
-          throw new SessionNotCreatedException("eeek");
-        }))
-        .build();
+  void shouldNotPropagateExceptionsWhenSessionCreationFails() {
+    Node local =
+        LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
+            .add(
+                caps,
+                new TestSessionFactory(
+                    (id, c) -> {
+                      throw new SessionNotCreatedException("eeek");
+                    }))
+            .build();
 
     Either<WebDriverException, CreateSessionResponse> response =
-      local.newSession(createSessionRequest(caps));
+        local.newSession(createSessionRequest(caps));
 
     assertThatEither(response).isLeft();
   }
 
   @Test
-  public void eachSessionShouldReportTheNodesUrl() throws URISyntaxException {
+  void eachSessionShouldReportTheNodesUrl() throws URISyntaxException {
     URI sessionUri = new URI("http://cheese:42/peas");
-    Node node = LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
-        .add(caps, new TestSessionFactory((id, c) -> new Session(id, sessionUri, stereotype, c, Instant.now())))
-        .build();
+    Node node =
+        LocalNode.builder(tracer, bus, uri, uri, registrationSecret)
+            .add(
+                caps,
+                new TestSessionFactory(
+                    (id, c) -> new Session(id, sessionUri, stereotype, c, Instant.now())))
+            .build();
 
     Either<WebDriverException, CreateSessionResponse> response =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
     Session session = response.right().getSession();
 
@@ -390,12 +474,12 @@ public class NodeTest {
   }
 
   @Test
-  public void quittingASessionShouldCauseASessionClosedEventToBeFired() {
+  void quittingASessionShouldCauseASessionClosedEventToBeFired() {
     AtomicReference<Object> obj = new AtomicReference<>();
     bus.addListener(SessionClosedEvent.listener(obj::set));
 
     Either<WebDriverException, CreateSessionResponse> response =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
     Session session = response.right().getSession();
     node.stop(session.getId());
@@ -408,9 +492,9 @@ public class NodeTest {
   }
 
   @Test
-  public void canReturnStatus() {
+  void canReturnStatus() {
     Either<WebDriverException, CreateSessionResponse> response =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
 
     HttpRequest req = new HttpRequest(GET, "/status");
@@ -449,32 +533,34 @@ public class NodeTest {
   }
 
   @Test
-  public void returns404ForAnUnknownCommand() {
+  void returns404ForAnUnknownCommand() {
     HttpRequest req = new HttpRequest(GET, "/foo");
     HttpResponse res = node.execute(req);
     assertThat(res.getStatus()).isEqualTo(404);
     Map<String, Object> content = new Json().toType(string(res), MAP_TYPE);
-    assertThat(content).containsOnlyKeys("value")
-        .extracting("value").asInstanceOf(MAP)
+    assertThat(content)
+        .containsOnlyKeys("value")
+        .extracting("value")
+        .asInstanceOf(MAP)
         .containsEntry("error", "unknown command")
         .containsEntry("message", "Unable to find handler for (GET) /foo");
   }
 
   @Test
-  public void canUploadAFile() throws IOException {
+  void canUploadAFile() throws IOException {
     Either<WebDriverException, CreateSessionResponse> response =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(response).isRight();
     Session session = response.right().getSession();
 
-    HttpRequest req = new HttpRequest(POST, String.format("/session/%s/file", session.getId()));
+    HttpRequest req = new HttpRequest(POST, String.format("/session/%s/se/file", session.getId()));
     String hello = "Hello, world!";
     String zip = Zip.zip(createTmpFile(hello));
     String payload = new Json().toJson(Collections.singletonMap("file", zip));
-    req.setContent(() -> new ByteArrayInputStream(payload.getBytes()));
+    req.setContent(Contents.bytes(payload.getBytes()));
     node.execute(req);
 
-    File baseDir = getTemporaryFilesystemBaseDir(local.getTemporaryFilesystem(session.getId()));
+    File baseDir = getTemporaryFilesystemBaseDir(local.getUploadsFilesystem(session.getId()));
     assertThat(baseDir.listFiles()).hasSize(1);
     File uploadDir = baseDir.listFiles()[0];
     assertThat(uploadDir.listFiles()).hasSize(1);
@@ -485,24 +571,276 @@ public class NodeTest {
   }
 
   @Test
-  public void shouldNotCreateSessionIfDraining() {
+  @DisplayName("DownloadsTestCase")
+  void canDownloadAFile() throws IOException {
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
+    assertThatEither(response).isRight();
+    Session session = response.right().getSession();
+    String hello = "Hello, world!";
+
+    HttpRequest req = new HttpRequest(POST, String.format("/session/%s/se/files", session.getId()));
+
+    // Let's simulate as if we downloaded a file via a test case
+    String zip = simulateFileDownload(session.getId(), hello);
+
+    String payload = new Json().toJson(Collections.singletonMap("name", zip));
+    req.setContent(Contents.bytes(payload.getBytes()));
+    HttpResponse rsp = node.execute(req);
+    Map<String, Object> raw = new Json().toType(string(rsp), Json.MAP_TYPE);
+    try {
+      assertThat(raw).isNotNull();
+      File baseDir = getTemporaryFilesystemBaseDir(TemporaryFilesystem.getDefaultTmpFS());
+      Map<String, Object> map =
+          Optional.ofNullable(raw.get("value"))
+              .map(data -> (Map<String, Object>) data)
+              .orElseThrow(() -> new IllegalStateException("Could not find value attribute"));
+      String encodedContents = map.get("contents").toString();
+      Zip.unzip(encodedContents, baseDir);
+      Path path = new File(baseDir.getAbsolutePath() + "/" + map.get("filename")).toPath();
+      String decodedContents = String.join("", Files.readAllLines(path));
+      assertThat(decodedContents).isEqualTo(hello);
+    } finally {
+      node.stop(session.getId());
+    }
+  }
+
+  @Test
+  @DisplayName("DownloadsTestCase")
+  void canDownloadMultipleFile() throws IOException {
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
+    assertThatEither(response).isRight();
+    Session session = response.right().getSession();
+    String hello = "Hello, world!";
+
+    HttpRequest req = new HttpRequest(POST, String.format("/session/%s/se/files", session.getId()));
+
+    // Let's simulate as if we downloaded a file via a test case
+    String zip = simulateFileDownload(session.getId(), hello);
+
+    // This file we are going to leave in the downloads directory of the session
+    // Just to check if we can clean up all the files for the session
+    simulateFileDownload(session.getId(), "Goodbye, world!");
+
+    String payload = new Json().toJson(Collections.singletonMap("name", zip));
+    req.setContent(Contents.bytes(payload.getBytes()));
+    HttpResponse rsp = node.execute(req);
+    Map<String, Object> raw = new Json().toType(string(rsp), Json.MAP_TYPE);
+    try {
+      assertThat(raw).isNotNull();
+      File baseDir = getTemporaryFilesystemBaseDir(TemporaryFilesystem.getDefaultTmpFS());
+      Map<String, Object> map =
+          Optional.ofNullable(raw.get("value"))
+              .map(data -> (Map<String, Object>) data)
+              .orElseThrow(() -> new IllegalStateException("Could not find value attribute"));
+      String encodedContents = map.get("contents").toString();
+      Zip.unzip(encodedContents, baseDir);
+      Path path = new File(baseDir.getAbsolutePath() + "/" + map.get("filename")).toPath();
+      String decodedContents = String.join("", Files.readAllLines(path));
+      assertThat(decodedContents).isEqualTo(hello);
+    } finally {
+      UUID downloadsId = local.getDownloadsIdForSession(session.getId());
+      File someDir = getTemporaryFilesystemBaseDir(local.getDownloadsFilesystem(downloadsId));
+      node.stop(session.getId());
+      assertThat(someDir).doesNotExist();
+    }
+  }
+
+  @Test
+  @DisplayName("DownloadsTestCase")
+  void canListFilesToDownload() throws IOException {
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
+    assertThatEither(response).isRight();
+    Session session = response.right().getSession();
+    String hello = "Hello, world!";
+    String zip = simulateFileDownload(session.getId(), hello);
+    HttpRequest req = new HttpRequest(GET, String.format("/session/%s/se/files", session.getId()));
+    HttpResponse rsp = node.execute(req);
+    Map<String, Object> raw = new Json().toType(string(rsp), Json.MAP_TYPE);
+    try {
+      assertThat(raw).isNotNull();
+      Map<String, Object> map =
+          Optional.ofNullable(raw.get("value"))
+              .map(data -> (Map<String, Object>) data)
+              .orElseThrow(() -> new IllegalStateException("Could not find value attribute"));
+      List<String> files = (List<String>) map.get("names");
+      assertThat(files).contains(zip);
+    } finally {
+      node.stop(session.getId());
+    }
+  }
+
+  @Test
+  @DisplayName("DownloadsTestCase")
+  void canDeleteFileDownloads() throws IOException {
+
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
+    assertThatEither(response).isRight();
+    Session session = response.right().getSession();
+    String zip = simulateFileDownload(session.getId(), "Hello, world!");
+
+    try {
+      assertThat(listFileDownloads(session.getId())).contains(zip);
+
+      HttpRequest deleteRequest =
+          new HttpRequest(DELETE, String.format("/session/%s/se/files", session.getId()));
+      HttpResponse deleteResponse = node.execute(deleteRequest);
+      assertThat(deleteResponse.isSuccessful()).isTrue();
+
+      assertThat(listFileDownloads(session.getId()).isEmpty()).isTrue();
+    } finally {
+      node.stop(session.getId());
+    }
+  }
+
+  @Test
+  @DisplayName("DownloadsTestCase")
+  void ensureImmunityToSessionTimeOutsForFileDownloads() throws InterruptedException {
+    Consumer<HttpResponse> DOWNLOAD_RSP_VALIDATOR =
+        response -> {
+          Map<String, Object> map = new Json().toType(string(response), Json.MAP_TYPE);
+          assertThat(map).isNotNull();
+          List<String> files =
+              Optional.ofNullable(map.get("value"))
+                  .map(data -> (Map<String, Object>) data)
+                  .map(data -> (List<String>) data.get("names"))
+                  .orElseThrow(() -> new IllegalStateException("Could not find value attribute"));
+          assertThat(files).isEmpty();
+        };
+
+    Function<Session, HttpResponse> TRIGGER_LIST_FILES =
+        session -> {
+          HttpRequest req =
+              new HttpRequest(GET, String.format("/session/%s/se/files", session.getId()));
+          HttpResponse response = node.execute(req);
+          assertThat(response.getStatus()).isEqualTo(200);
+          return response;
+        };
+
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
+    assertThatEither(response).isRight();
+    Session session = response.right().getSession();
+    try {
+      HttpResponse rsp = TRIGGER_LIST_FILES.apply(session);
+      // Totally we will try list files 3 times, each with a gap of 900 ms.
+      // The session timeout is defined as 1 second. So we try and ensure that
+      // even after trying to download 3 times, we don't hit any errors.
+      for (int i = 0; i < 3; i++) {
+        DOWNLOAD_RSP_VALIDATOR.accept(rsp);
+        node.isSessionOwner(session.getId()); // Keep session active so that we dont timeout
+        TimeUnit.MILLISECONDS.sleep(700);
+      }
+    } finally {
+      node.stop(session.getId());
+    }
+  }
+
+  @Test
+  void canDownloadFileThrowsErrorMsgWhenDownloadsDirNotSpecified() {
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
+    assertThatEither(response).isRight();
+    Session session = response.right().getSession();
+    try {
+      createTmpFile("Hello, world!");
+      HttpRequest req =
+          new HttpRequest(POST, String.format("/session/%s/se/files", session.getId()));
+      String msg =
+          "Please enable management of downloads via the command line arg "
+              + "[--enable-managed-downloads] and restart the node";
+      assertThatThrownBy(() -> node.execute(req)).hasMessageContaining(msg);
+    } finally {
+      node.stop(session.getId());
+    }
+  }
+
+  @Test
+  @DisplayName("DownloadsTestCase")
+  void canDownloadFileThrowsErrorMsgWhenPayloadIsMissing() {
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
+    assertThatEither(response).isRight();
+    Session session = response.right().getSession();
+    try {
+      createTmpFile("Hello, world!");
+
+      HttpRequest req =
+          new HttpRequest(POST, String.format("/session/%s/se/files", session.getId()));
+      String msg = "Please specify file to download in payload as {\"name\": \"fileToDownload\"}";
+      assertThatThrownBy(() -> node.execute(req)).hasMessageContaining(msg);
+    } finally {
+      node.stop(session.getId());
+    }
+  }
+
+  @Test
+  @DisplayName("DownloadsTestCase")
+  void canDownloadFileThrowsErrorMsgWhenWrongPayloadIsGiven() {
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
+    assertThatEither(response).isRight();
+    Session session = response.right().getSession();
+    try {
+      createTmpFile("Hello, world!");
+
+      HttpRequest req =
+          new HttpRequest(POST, String.format("/session/%s/se/files", session.getId()));
+      String payload = new Json().toJson(Collections.singletonMap("my-file", "README.md"));
+      req.setContent(Contents.bytes(payload.getBytes()));
+
+      String msg = "Please specify file to download in payload as {\"name\": \"fileToDownload\"}";
+      assertThatThrownBy(() -> node.execute(req)).hasMessageContaining(msg);
+    } finally {
+      node.stop(session.getId());
+    }
+  }
+
+  @Test
+  @DisplayName("DownloadsTestCase")
+  void canDownloadFileThrowsErrorMsgWhenFileNotFound() {
+    Either<WebDriverException, CreateSessionResponse> response =
+        node.newSession(createSessionRequest(caps));
+    assertThatEither(response).isRight();
+    Session session = response.right().getSession();
+    try {
+      createTmpFile("Hello, world!");
+
+      HttpRequest req =
+          new HttpRequest(POST, String.format("/session/%s/se/files", session.getId()));
+      String payload = new Json().toJson(Collections.singletonMap("name", "README.md"));
+      req.setContent(Contents.bytes(payload.getBytes()));
+
+      String msg = "Cannot find file [README.md] in directory";
+      assertThatThrownBy(() -> node.execute(req)).hasMessageContaining(msg);
+    } finally {
+      node.stop(session.getId());
+    }
+  }
+
+  @Test
+  void shouldNotCreateSessionIfDraining() {
     node.drain();
     assertThat(local.isDraining()).isTrue();
     assertThat(node.isDraining()).isTrue();
 
-    Either<WebDriverException, CreateSessionResponse> sessionResponse = node.newSession(createSessionRequest(caps));
+    Either<WebDriverException, CreateSessionResponse> sessionResponse =
+        node.newSession(createSessionRequest(caps));
     assertThatEither(sessionResponse).isLeft();
   }
 
   @Test
-  public void shouldNotShutdownDuringOngoingSessionsIfDraining() throws InterruptedException {
+  void shouldNotShutdownDuringOngoingSessionsIfDraining() throws InterruptedException {
     Either<WebDriverException, CreateSessionResponse> firstResponse =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(firstResponse).isRight();
     Session firstSession = firstResponse.right().getSession();
 
     Either<WebDriverException, CreateSessionResponse> secondResponse =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(secondResponse).isRight();
     Session secondSession = secondResponse.right().getSession();
 
@@ -513,7 +851,8 @@ public class NodeTest {
     assertThat(local.isDraining()).isTrue();
     assertThat(node.isDraining()).isTrue();
 
-    Either<WebDriverException, CreateSessionResponse> thirdResponse = node.newSession(createSessionRequest(caps));
+    Either<WebDriverException, CreateSessionResponse> thirdResponse =
+        node.newSession(createSessionRequest(caps));
     assertThatEither(thirdResponse).isLeft();
 
     assertThat(firstSession).isNotNull();
@@ -527,17 +866,17 @@ public class NodeTest {
   }
 
   @Test
-  public void shouldShutdownAfterSessionsCompleteIfDraining() throws InterruptedException {
+  void shouldShutdownAfterSessionsCompleteIfDraining() throws InterruptedException {
     CountDownLatch latch = new CountDownLatch(1);
     bus.addListener(NodeDrainComplete.listener(ignored -> latch.countDown()));
 
     Either<WebDriverException, CreateSessionResponse> firstResponse =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(firstResponse).isRight();
     Session firstSession = firstResponse.right().getSession();
 
     Either<WebDriverException, CreateSessionResponse> secondResponse =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(secondResponse).isRight();
     Session secondSession = secondResponse.right().getSession();
 
@@ -548,16 +887,16 @@ public class NodeTest {
 
     latch.await(5, SECONDS);
 
-    assertThat(latch.getCount()).isEqualTo(0);
+    assertThat(latch.getCount()).isZero();
   }
 
   @Test
-  public void shouldAllowsWebDriverCommandsForOngoingSessionIfDraining() throws InterruptedException {
+  void shouldAllowsWebDriverCommandsForOngoingSessionIfDraining() throws InterruptedException {
     CountDownLatch latch = new CountDownLatch(1);
     bus.addListener(NodeDrainComplete.listener(ignored -> latch.countDown()));
 
     Either<WebDriverException, CreateSessionResponse> sessionResponse =
-      node.newSession(createSessionRequest(caps));
+        node.newSession(createSessionRequest(caps));
     assertThatEither(sessionResponse).isRight();
     Session session = sessionResponse.right().getSession();
 
@@ -573,11 +912,22 @@ public class NodeTest {
     assertThat(latch.getCount()).isEqualTo(1);
   }
 
+  private File createFile(String content, File directory) {
+    try {
+      File f = new File(directory.getAbsolutePath(), UUID.randomUUID().toString());
+      f.deleteOnExit();
+      Files.writeString(directory.toPath(), content);
+      return f;
+    } catch (IOException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
   private File createTmpFile(String content) {
     try {
       File f = File.createTempFile("webdriver", "tmp");
       f.deleteOnExit();
-      Files.write(f.toPath(), content.getBytes(StandardCharsets.UTF_8));
+      Files.writeString(f.toPath(), content);
       return f;
     } catch (IOException e) {
       throw new UncheckedIOException(e);
@@ -592,10 +942,36 @@ public class NodeTest {
   }
 
   private CreateSessionRequest createSessionRequest(Capabilities caps) {
-    return new CreateSessionRequest(
-            ImmutableSet.copyOf(Dialect.values()),
-            caps,
-            ImmutableMap.of());
+    return new CreateSessionRequest(ImmutableSet.copyOf(Dialect.values()), caps, ImmutableMap.of());
+  }
+
+  private String simulateFileDownload(SessionId id, String text) throws IOException {
+    File zip = createTmpFile(text);
+    UUID downloadsId = local.getDownloadsIdForSession(id);
+    File someDir = getTemporaryFilesystemBaseDir(local.getDownloadsFilesystem(downloadsId));
+    File downloadsDirectory = Optional.ofNullable(someDir.listFiles()).orElse(new File[] {})[0];
+    File target = new File(downloadsDirectory, zip.getName());
+    boolean renamed = zip.renameTo(target);
+    if (!renamed) {
+      throw new IllegalStateException(
+          "Could not move "
+              + zip.getName()
+              + " to directory "
+              + target.getParentFile().getAbsolutePath());
+    }
+    return zip.getName();
+  }
+
+  private List<String> listFileDownloads(SessionId sessionId) {
+    HttpRequest req = new HttpRequest(GET, String.format("/session/%s/se/files", sessionId));
+    HttpResponse rsp = node.execute(req);
+    Map<String, Object> raw = new Json().toType(string(rsp), Json.MAP_TYPE);
+    assertThat(raw).isNotNull();
+    Map<String, Object> map =
+        Optional.ofNullable(raw.get("value"))
+            .map(data -> (Map<String, Object>) data)
+            .orElseThrow(() -> new IllegalStateException("Could not find value attribute"));
+    return (List<String>) map.get("names");
   }
 
   private static class MyClock extends Clock {
