@@ -17,6 +17,15 @@
 
 package org.openqa.selenium.grid.web;
 
+import static java.net.HttpURLConnection.HTTP_MOVED_TEMP;
+import static java.net.HttpURLConnection.HTTP_OK;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.openqa.selenium.remote.http.HttpMethod.GET;
+
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -26,21 +35,9 @@ import org.openqa.selenium.remote.http.HttpRequest;
 import org.openqa.selenium.remote.http.HttpResponse;
 import org.openqa.selenium.remote.http.Route;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
+class ResourceHandlerTest {
 
-import static java.net.HttpURLConnection.HTTP_MOVED_TEMP;
-import static java.net.HttpURLConnection.HTTP_OK;
-import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.openqa.selenium.remote.http.HttpMethod.GET;
-
-public class ResourceHandlerTest {
-
-  @TempDir
-  File folder;
+  @TempDir File folder;
   private Path base;
 
   @BeforeEach
@@ -49,8 +46,8 @@ public class ResourceHandlerTest {
   }
 
   @Test
-  public void shouldLoadContent() throws IOException {
-    Files.write(base.resolve("content.txt"), "I like cheese".getBytes(UTF_8));
+  void shouldLoadContent() throws IOException {
+    Files.writeString(base.resolve("content.txt"), "I like cheese");
 
     HttpHandler handler = new ResourceHandler(new PathResource(base));
     HttpResponse res = handler.execute(new HttpRequest(GET, "/content.txt"));
@@ -59,7 +56,7 @@ public class ResourceHandlerTest {
   }
 
   @Test
-  public void shouldRedirectIfDirectoryButPathDoesNotEndInASlash() throws IOException {
+  void shouldRedirectIfDirectoryButPathDoesNotEndInASlash() throws IOException {
     Path dir = base.resolve("cheese");
 
     Files.createDirectories(dir);
@@ -72,7 +69,7 @@ public class ResourceHandlerTest {
   }
 
   @Test
-  public void shouldLoadAnIndexPage() throws IOException {
+  void shouldLoadAnIndexPage() throws IOException {
     Path subdir = base.resolve("subdir");
     Files.createDirectories(subdir);
 
@@ -88,13 +85,14 @@ public class ResourceHandlerTest {
   }
 
   @Test
-  public void canBeNestedWithinARoute() throws IOException {
+  void canBeNestedWithinARoute() throws IOException {
     Path contents = base.resolve("cheese").resolve("cake.txt");
 
     Files.createDirectories(contents.getParent());
-    Files.write(contents, "delicious".getBytes(UTF_8));
+    Files.writeString(contents, "delicious");
 
-    HttpHandler handler = Route.prefix("/peas").to(Route.combine(new ResourceHandler(new PathResource(base))));
+    HttpHandler handler =
+        Route.prefix("/peas").to(Route.combine(new ResourceHandler(new PathResource(base))));
 
     // Check redirect works as expected
     HttpResponse res = handler.execute(new HttpRequest(GET, "/peas/cheese"));
@@ -108,9 +106,9 @@ public class ResourceHandlerTest {
   }
 
   @Test
-  public void shouldRedirectToIndexPageIfOneExists() throws IOException {
+  void shouldRedirectToIndexPageIfOneExists() throws IOException {
     Path index = base.resolve("index.html");
-    Files.write(index, "Cheese".getBytes(UTF_8));
+    Files.writeString(index, "Cheese");
 
     ResourceHandler handler = new ResourceHandler(new PathResource(base));
     HttpResponse res = handler.execute(new HttpRequest(GET, "/"));
